@@ -17,8 +17,6 @@
 
 package org.apache.kafka.clients.admin;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -26,18 +24,18 @@ import java.util.Map;
  * A new partition reassignment, which can be applied via {@link AdminClient#alterPartitionReassignments(Map, AlterPartitionReassignmentsOptions)}.
  */
 public class NewPartitionReassignment {
-	private final List<Integer> targetReplicas;
+    private final List<Integer> targetReplicas;
 
-	/**
-	 * @throws IllegalArgumentException if no replicas are supplied
-	 */
-	public NewPartitionReassignment(List<Integer> targetReplicas) {
-		if (targetReplicas == null || targetReplicas.size() == 0)
-			throw new IllegalArgumentException("Cannot create a new partition reassignment without any replicas");
-		this.targetReplicas = Collections.unmodifiableList(new ArrayList<>(targetReplicas));
-	}
+    /**
+     * @throws IllegalArgumentException if no replicas are supplied
+     */
+    public NewPartitionReassignment(List<Integer> targetReplicas) {
+        if (targetReplicas == null || targetReplicas.isEmpty())
+            throw new IllegalArgumentException("Cannot create a new partition reassignment without any replicas");
+        this.targetReplicas = List.copyOf(targetReplicas);
+    }
 
-	public List<Integer> targetReplicas() {
-		return targetReplicas;
-	}
+    public List<Integer> targetReplicas() {
+        return targetReplicas;
+    }
 }
