@@ -16,6 +16,7 @@
  */
 package org.apache.kafka.clients.admin.internals;
 
+import org.apache.kafka.clients.CommonClientConfigs;
 import org.apache.kafka.common.Node;
 import org.apache.kafka.common.errors.DisconnectException;
 import org.apache.kafka.common.errors.UnsupportedVersionException;
@@ -23,10 +24,22 @@ import org.apache.kafka.common.requests.AbstractRequest;
 import org.apache.kafka.common.requests.AbstractResponse;
 import org.apache.kafka.common.requests.FindCoordinatorRequest.NoBatchedFindCoordinatorsException;
 import org.apache.kafka.common.requests.OffsetFetchRequest.NoBatchedOffsetFetchRequestException;
+import org.apache.kafka.common.utils.ExponentialBackoff;
 import org.apache.kafka.common.utils.LogContext;
+
 import org.slf4j.Logger;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.OptionalInt;
+import java.util.Set;
 import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -71,7 +84,7 @@ import java.util.stream.Collectors;
  */
 public class AdminApiDriver<K, V> {
     private final Logger log;
-    private final long retryBackoffMs;
+    private final ExponentialBackoff retryBackoff;
     private final long deadlineMs;
     private final AdminApiHandler<K, V> handler;
     private final AdminApiFuture<K, V> future;
@@ -80,13 +93,30 @@ public class AdminApiDriver<K, V> {
     private final BiMultimap<FulfillmentScope, K> fulfillmentMap = new BiMultimap<>();
     private final Map<ApiRequestScope, RequestState> requestStates = new HashMap<>();
 
-    public AdminApiDriver(AdminApiHandler<K, V> handler, AdminApiFuture<K, V> future, long deadlineMs, long retryBackoffMs, LogContext logContext) {
+    public AdminApiDriver(
+        AdminApiHandler<K, V> handler,
+        AdminApiFuture<K, V> future,
+        long deadlineMs,
+        long retryBackoffMs,
+        long retryBackoffMaxMs,
+        LogContext logContext
+    ) {
         this.handler = handler;
         this.future = future;
         this.deadlineMs = deadlineMs;
-        this.retryBackoffMs = retryBackoffMs;
+        this.retryBackoff = new ExponentialBackoff(
+            retryBackoffMs,
+            CommonClientConfigs.RETRY_BACKOFF_EXP_BASE,
+            retryBackoffMaxMs,
+            CommonClientConfigs.RETRY_BACKOFF_JITTER);
         this.log = logContext.logger(AdminApiDriver.class);
-        retryLookup(future.lookupKeys());
+
+        // For any lookup keys for which we do not have cached information, we will need to look up
+        // metadata. For all cached keys, they can proceed straight to the fulfillment map.
+        // Note that the cache is only used on the initial calls, and any errors that result
+        // in additional lookups use the full set of lookup keys.
+        retryLookup(future.uncachedLookupKeys());
+        future.cachedKeyBrokerIdMapping().forEach((key, brokerId) -> fulfillmentMap.put(new FulfillmentScope(brokerId), key));
     }
 
     /**
@@ -125,7 +155,9 @@ public class AdminApiDriver<K, V> {
 
     OptionalInt keyToBrokerId(K key) {
         Optional<FulfillmentScope> scope = fulfillmentMap.getKey(key);
-        return scope.map(fulfillmentScope -> OptionalInt.of(fulfillmentScope.destinationBrokerId)).orElseGet(OptionalInt::empty);
+        return scope
+            .map(fulfillmentScope -> OptionalInt.of(fulfillmentScope.destinationBrokerId))
+            .orElseGet(OptionalInt::empty);
     }
 
     /**
@@ -174,6 +206,7 @@ public class AdminApiDriver<K, V> {
      * after the driver is constructed and then again after each request returns
      * (i.e. after {@link #onFailure(long, RequestSpec, Throwable)} or
      * {@link #onResponse(long, RequestSpec, AbstractResponse, Node)}).
+     *
      * @return A list of requests that need to be sent
      */
     public List<RequestSpec<K>> poll() {
@@ -186,16 +219,28 @@ public class AdminApiDriver<K, V> {
     /**
      * Callback that is invoked when a `Call` returns a response successfully.
      */
-    public void onResponse(long currentTimeMs, RequestSpec<K> spec, AbstractResponse response, Node node) {
+    public void onResponse(
+        long currentTimeMs,
+        RequestSpec<K> spec,
+        AbstractResponse response,
+        Node node
+    ) {
         clearInflightRequest(currentTimeMs, spec);
 
         if (spec.scope instanceof FulfillmentScope) {
-            AdminApiHandler.ApiResult<K, V> result = handler.handleResponse(node, spec.keys, response);
+            AdminApiHandler.ApiResult<K, V> result = handler.handleResponse(
+                node,
+                spec.keys,
+                response
+            );
             complete(result.completedKeys);
             completeExceptionally(result.failedKeys);
             retryLookup(result.unmappedKeys);
         } else {
-            AdminApiLookupStrategy.LookupResult<K> result = handler.lookupStrategy().handleResponse(spec.keys, response);
+            AdminApiLookupStrategy.LookupResult<K> result = handler.lookupStrategy().handleResponse(
+                spec.keys,
+                response
+            );
 
             result.completedKeys.forEach(lookupMap::remove);
             completeLookup(result.mappedKeys);
@@ -206,34 +251,55 @@ public class AdminApiDriver<K, V> {
     /**
      * Callback that is invoked when a `Call` is failed.
      */
-    public void onFailure(long currentTimeMs, RequestSpec<K> spec, Throwable t) {
+    public void onFailure(
+        long currentTimeMs,
+        RequestSpec<K> spec,
+        Throwable t
+    ) {
         clearInflightRequest(currentTimeMs, spec);
         if (t instanceof DisconnectException) {
-            log.debug("Node disconnected before response could be received for request {}. " + "Will attempt retry", spec.request);
+            log.debug("Node disconnected before response could be received for request {}. " +
+                "Will attempt retry", spec.request);
 
             // After a disconnect, we want the driver to attempt to lookup the key
             // again. This gives us a chance to find a new coordinator or partition
             // leader for example.
-            Set<K> keysToUnmap = spec.keys.stream().filter(future.lookupKeys()::contains).collect(Collectors.toSet());
+            Set<K> keysToUnmap = spec.keys.stream()
+                .filter(future.lookupKeys()::contains)
+                .collect(Collectors.toSet());
             retryLookup(keysToUnmap);
 
         } else if (t instanceof NoBatchedFindCoordinatorsException || t instanceof NoBatchedOffsetFetchRequestException) {
             ((CoordinatorStrategy) handler.lookupStrategy()).disableBatch();
-            Set<K> keysToUnmap = spec.keys.stream().filter(future.lookupKeys()::contains).collect(Collectors.toSet());
+            Set<K> keysToUnmap = spec.keys.stream()
+                .filter(future.lookupKeys()::contains)
+                .collect(Collectors.toSet());
             retryLookup(keysToUnmap);
         } else if (t instanceof UnsupportedVersionException) {
             if (spec.scope instanceof FulfillmentScope) {
                 int brokerId = ((FulfillmentScope) spec.scope).destinationBrokerId;
-                Map<K, Throwable> unrecoverableFailures = handler.handleUnsupportedVersionException(brokerId, (UnsupportedVersionException) t, spec.keys);
+                Map<K, Throwable> unrecoverableFailures =
+                    handler.handleUnsupportedVersionException(
+                        brokerId,
+                        (UnsupportedVersionException) t,
+                        spec.keys);
                 completeExceptionally(unrecoverableFailures);
             } else {
-                Map<K, Throwable> unrecoverableLookupFailures = handler.lookupStrategy().handleUnsupportedVersionException((UnsupportedVersionException) t, spec.keys);
+                Map<K, Throwable> unrecoverableLookupFailures =
+                    handler.lookupStrategy().handleUnsupportedVersionException(
+                        (UnsupportedVersionException) t,
+                        spec.keys);
                 completeLookupExceptionally(unrecoverableLookupFailures);
-                Set<K> keysToUnmap = spec.keys.stream().filter(k -> !unrecoverableLookupFailures.containsKey(k)).collect(Collectors.toSet());
+                Set<K> keysToUnmap = spec.keys.stream()
+                    .filter(k -> !unrecoverableLookupFailures.containsKey(k))
+                    .collect(Collectors.toSet());
                 retryLookup(keysToUnmap);
             }
         } else {
-            Map<K, Throwable> errors = spec.keys.stream().collect(Collectors.toMap(Function.identity(), key -> t));
+            Map<K, Throwable> errors = spec.keys.stream().collect(Collectors.toMap(
+                Function.identity(),
+                key -> t
+            ));
             if (spec.scope instanceof FulfillmentScope) {
                 completeExceptionally(errors);
             } else {
@@ -247,14 +313,18 @@ public class AdminApiDriver<K, V> {
         if (requestState != null) {
             // Only apply backoff if it's not a retry of a lookup request
             if (spec.scope instanceof FulfillmentScope) {
-                requestState.clearInflight(currentTimeMs + retryBackoffMs);
+                requestState.clearInflightAndBackoff(currentTimeMs);
             } else {
                 requestState.clearInflight(currentTimeMs);
             }
         }
     }
 
-    private <T extends ApiRequestScope> void collectRequests(List<RequestSpec<K>> requests, BiMultimap<T, K> multimap, BiFunction<Set<K>, T, Collection<AdminApiHandler.RequestAndKeys<K>>> buildRequest) {
+    private <T extends ApiRequestScope> void collectRequests(
+        List<RequestSpec<K>> requests,
+        BiMultimap<T, K> multimap,
+        BiFunction<Set<K>, T, Collection<AdminApiHandler.RequestAndKeys<K>>> buildRequest
+    ) {
         for (Map.Entry<T, Set<K>> entry : multimap.entrySet()) {
             T scope = entry.getKey();
 
@@ -269,7 +339,7 @@ public class AdminApiDriver<K, V> {
             }
 
             // Copy the keys to avoid exposing the underlying mutable set
-            Set<K> copyKeys = Collections.unmodifiableSet(new HashSet<>(keys));
+            Set<K> copyKeys = Set.copyOf(keys);
 
             Collection<AdminApiHandler.RequestAndKeys<K>> newRequests = buildRequest.apply(copyKeys, scope);
             if (newRequests.isEmpty()) {
@@ -279,7 +349,15 @@ public class AdminApiDriver<K, V> {
             // Only process the first request; all the remaining requests will be targeted at the same broker
             // and we don't want to issue more than one fulfillment request per broker at a time
             AdminApiHandler.RequestAndKeys<K> newRequest = newRequests.iterator().next();
-            RequestSpec<K> spec = new RequestSpec<>(handler.apiName() + "(api=" + newRequest.request.apiKey() + ")", scope, newRequest.keys, newRequest.request, requestState.nextAllowedRetryMs, deadlineMs, requestState.tries);
+            RequestSpec<K> spec = new RequestSpec<>(
+                handler.apiName() + "(api=" + newRequest.request.apiKey() + ")",
+                scope,
+                newRequest.keys,
+                newRequest.request,
+                requestState.nextAllowedRetryMs,
+                deadlineMs,
+                requestState.tries
+            );
 
             requestState.setInflight(spec);
             requests.add(spec);
@@ -287,11 +365,19 @@ public class AdminApiDriver<K, V> {
     }
 
     private void collectLookupRequests(List<RequestSpec<K>> requests) {
-        collectRequests(requests, lookupMap, (keys, scope) -> Collections.singletonList(new AdminApiHandler.RequestAndKeys<>(handler.lookupStrategy().buildRequest(keys), keys)));
+        collectRequests(
+            requests,
+            lookupMap,
+            (keys, scope) -> Collections.singletonList(new AdminApiHandler.RequestAndKeys<>(handler.lookupStrategy().buildRequest(keys), keys))
+        );
     }
 
     private void collectFulfillmentRequests(List<RequestSpec<K>> requests) {
-        collectRequests(requests, fulfillmentMap, (keys, scope) -> handler.buildRequest(scope.destinationBrokerId, keys));
+        collectRequests(
+            requests,
+            fulfillmentMap,
+            (keys, scope) -> handler.buildRequest(scope.destinationBrokerId, keys)
+        );
     }
 
     /**
@@ -308,7 +394,15 @@ public class AdminApiDriver<K, V> {
         public final long deadlineMs;
         public final int tries;
 
-        public RequestSpec(String name, ApiRequestScope scope, Set<K> keys, AbstractRequest.Builder<?> request, long nextAllowedTryMs, long deadlineMs, int tries) {
+        public RequestSpec(
+            String name,
+            ApiRequestScope scope,
+            Set<K> keys,
+            AbstractRequest.Builder<?> request,
+            long nextAllowedTryMs,
+            long deadlineMs,
+            int tries
+        ) {
             this.name = name;
             this.scope = scope;
             this.keys = keys;
@@ -320,7 +414,15 @@ public class AdminApiDriver<K, V> {
 
         @Override
         public String toString() {
-            return "RequestSpec(" + "name=" + name + ", scope=" + scope + ", keys=" + keys + ", request=" + request + ", nextAllowedTryMs=" + nextAllowedTryMs + ", deadlineMs=" + deadlineMs + ", tries=" + tries + ')';
+            return "RequestSpec(" +
+                "name=" + name +
+                ", scope=" + scope +
+                ", keys=" + keys +
+                ", request=" + request +
+                ", nextAllowedTryMs=" + nextAllowedTryMs +
+                ", deadlineMs=" + deadlineMs +
+                ", tries=" + tries +
+                ')';
         }
     }
 
@@ -338,9 +440,13 @@ public class AdminApiDriver<K, V> {
             return inflightRequest.isPresent();
         }
 
-        public void clearInflight(long nextAllowedRetryMs) {
+        public void clearInflight(long currentTimeMs) {
             this.inflightRequest = Optional.empty();
-            this.nextAllowedRetryMs = nextAllowedRetryMs;
+            this.nextAllowedRetryMs = currentTimeMs;
+        }
+
+        public void clearInflightAndBackoff(long currentTimeMs) {
+            clearInflight(currentTimeMs + retryBackoff.backoff(tries >= 1 ? tries - 1 : 0));
         }
 
         public void setInflight(RequestSpec<K> spec) {
@@ -368,10 +474,8 @@ public class AdminApiDriver<K, V> {
 
         @Override
         public boolean equals(Object o) {
-            if (this == o)
-                return true;
-            if (o == null || getClass() != o.getClass())
-                return false;
+            if (this == o) return true;
+            if (o == null || getClass() != o.getClass()) return false;
             FulfillmentScope that = (FulfillmentScope) o;
             return destinationBrokerId == that.destinationBrokerId;
         }
@@ -386,6 +490,7 @@ public class AdminApiDriver<K, V> {
      * Helper class which maintains a bi-directional mapping from a key to a set of values.
      * Each value can map to one and only one key, but many values can be associated with
      * a single key.
+     *
      * @param <K> The key type
      * @param <V> The value type
      */
