@@ -21,7 +21,12 @@ import org.apache.kafka.clients.consumer.ConsumerPartitionAssignor.Subscription;
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.message.ConsumerProtocolAssignment;
 import org.apache.kafka.common.message.ConsumerProtocolSubscription;
-import org.apache.kafka.common.protocol.types.*;
+import org.apache.kafka.common.protocol.types.ArrayOf;
+import org.apache.kafka.common.protocol.types.Field;
+import org.apache.kafka.common.protocol.types.Schema;
+import org.apache.kafka.common.protocol.types.Struct;
+import org.apache.kafka.common.protocol.types.Type;
+
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
@@ -31,10 +36,13 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
 import static org.apache.kafka.clients.consumer.internals.AbstractStickyAssignor.DEFAULT_GENERATION;
-import static org.apache.kafka.test.TestUtils.toSet;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class ConsumerProtocolTest {
 
@@ -46,19 +54,22 @@ public class ConsumerProtocolTest {
 
     @Test
     public void serializeDeserializeSubscriptionAllVersions() {
-        List<TopicPartition> ownedPartitions = Arrays.asList(new TopicPartition("foo", 0), new TopicPartition("bar", 0));
-        Subscription subscription = new Subscription(Arrays.asList("foo", "bar"), ByteBuffer.wrap("hello".getBytes()), ownedPartitions, generationId, rackId);
+        List<TopicPartition> ownedPartitions = Arrays.asList(
+            new TopicPartition("foo", 0),
+            new TopicPartition("bar", 0));
+        Subscription subscription = new Subscription(Arrays.asList("foo", "bar"),
+            ByteBuffer.wrap("hello".getBytes()), ownedPartitions, generationId, rackId);
 
         for (short version = ConsumerProtocolSubscription.LOWEST_SUPPORTED_VERSION; version <= ConsumerProtocolSubscription.HIGHEST_SUPPORTED_VERSION; version++) {
             ByteBuffer buffer = ConsumerProtocol.serializeSubscription(subscription, version);
             Subscription parsedSubscription = ConsumerProtocol.deserializeSubscription(buffer);
 
-            assertEquals(toSet(subscription.topics()), toSet(parsedSubscription.topics()));
+            assertEquals(Set.copyOf(subscription.topics()), Set.copyOf(parsedSubscription.topics()));
             assertEquals(subscription.userData(), parsedSubscription.userData());
             assertFalse(parsedSubscription.groupInstanceId().isPresent());
 
             if (version >= 1) {
-                assertEquals(toSet(subscription.ownedPartitions()), toSet(parsedSubscription.ownedPartitions()));
+                assertEquals(Set.copyOf(subscription.ownedPartitions()), Set.copyOf(parsedSubscription.ownedPartitions()));
             } else {
                 assertEquals(Collections.emptyList(), parsedSubscription.ownedPartitions());
             }
@@ -82,7 +93,7 @@ public class ConsumerProtocolTest {
         Subscription subscription = new Subscription(Arrays.asList("foo", "bar"), ByteBuffer.wrap(new byte[0]));
         ByteBuffer buffer = ConsumerProtocol.serializeSubscription(subscription);
         Subscription parsedSubscription = ConsumerProtocol.deserializeSubscription(buffer);
-        assertEquals(toSet(subscription.topics()), toSet(parsedSubscription.topics()));
+        assertEquals(Set.copyOf(subscription.topics()), Set.copyOf(parsedSubscription.topics()));
         assertEquals(0, parsedSubscription.userData().limit());
         assertFalse(parsedSubscription.groupInstanceId().isPresent());
         assertFalse(parsedSubscription.generationId().isPresent());
@@ -96,7 +107,7 @@ public class ConsumerProtocolTest {
 
         Subscription parsedSubscription = ConsumerProtocol.deserializeSubscription(buffer);
         parsedSubscription.setGroupInstanceId(groupInstanceId);
-        assertEquals(toSet(subscription.topics()), toSet(parsedSubscription.topics()));
+        assertEquals(Set.copyOf(subscription.topics()), Set.copyOf(parsedSubscription.topics()));
         assertEquals(0, parsedSubscription.userData().limit());
         assertEquals(groupInstanceId, parsedSubscription.groupInstanceId());
         assertFalse(parsedSubscription.generationId().isPresent());
@@ -108,19 +119,33 @@ public class ConsumerProtocolTest {
         Subscription subscription = new Subscription(Arrays.asList("foo", "bar"), null);
         ByteBuffer buffer = ConsumerProtocol.serializeSubscription(subscription);
         Subscription parsedSubscription = ConsumerProtocol.deserializeSubscription(buffer);
-        assertEquals(toSet(subscription.topics()), toSet(parsedSubscription.topics()));
+        assertEquals(Set.copyOf(subscription.topics()), Set.copyOf(parsedSubscription.topics()));
         assertNull(parsedSubscription.userData());
         assertFalse(parsedSubscription.rackId().isPresent());
     }
 
     @Test
     public void serializeSubscriptionShouldOrderTopics() {
-        assertEquals(ConsumerProtocol.serializeSubscription(new Subscription(Arrays.asList("foo", "bar"), null, Arrays.asList(tp1, tp2))), ConsumerProtocol.serializeSubscription(new Subscription(Arrays.asList("bar", "foo"), null, Arrays.asList(tp1, tp2))));
+        assertEquals(
+            ConsumerProtocol.serializeSubscription(
+                new Subscription(Arrays.asList("foo", "bar"), null, Arrays.asList(tp1, tp2))
+            ),
+            ConsumerProtocol.serializeSubscription(
+                new Subscription(Arrays.asList("bar", "foo"), null, Arrays.asList(tp1, tp2))
+            )
+        );
     }
 
     @Test
     public void serializeSubscriptionShouldOrderOwnedPartitions() {
-        assertEquals(ConsumerProtocol.serializeSubscription(new Subscription(Arrays.asList("foo", "bar"), null, Arrays.asList(tp1, tp2))), ConsumerProtocol.serializeSubscription(new Subscription(Arrays.asList("foo", "bar"), null, Arrays.asList(tp2, tp1))));
+        assertEquals(
+            ConsumerProtocol.serializeSubscription(
+                new Subscription(Arrays.asList("foo", "bar"), null, Arrays.asList(tp1, tp2))
+            ),
+            ConsumerProtocol.serializeSubscription(
+                new Subscription(Arrays.asList("foo", "bar"), null, Arrays.asList(tp2, tp1))
+            )
+        );
     }
 
     @Test
@@ -128,7 +153,7 @@ public class ConsumerProtocolTest {
         Subscription subscription = new Subscription(Arrays.asList("foo", "bar"), null);
         ByteBuffer buffer = ConsumerProtocol.serializeSubscription(subscription, (short) 0);
         Subscription parsedSubscription = ConsumerProtocol.deserializeSubscription(buffer);
-        assertEquals(toSet(parsedSubscription.topics()), toSet(parsedSubscription.topics()));
+        assertEquals(Set.copyOf(subscription.topics()), Set.copyOf(parsedSubscription.topics()));
         assertNull(parsedSubscription.userData());
         assertTrue(parsedSubscription.ownedPartitions().isEmpty());
         assertFalse(parsedSubscription.generationId().isPresent());
@@ -148,7 +173,7 @@ public class ConsumerProtocolTest {
         // ignore the version assuming it is the old byte code, as it will blindly deserialize as V0
         ConsumerProtocol.deserializeVersion(buffer);
         Subscription parsedSubscription = ConsumerProtocol.deserializeSubscription(buffer, (short) 0);
-        assertEquals(toSet(subscription.topics()), toSet(parsedSubscription.topics()));
+        assertEquals(Set.copyOf(subscription.topics()), Set.copyOf(parsedSubscription.topics()));
         assertNull(parsedSubscription.userData());
         assertTrue(parsedSubscription.ownedPartitions().isEmpty());
         assertFalse(parsedSubscription.groupInstanceId().isPresent());
@@ -162,8 +187,8 @@ public class ConsumerProtocolTest {
 
         Subscription subscription = ConsumerProtocol.deserializeSubscription(buffer);
         subscription.setGroupInstanceId(groupInstanceId);
-        assertEquals(Collections.singleton("topic"), toSet(subscription.topics()));
-        assertEquals(Collections.singleton(tp2), toSet(subscription.ownedPartitions()));
+        assertEquals(Collections.singleton("topic"), Set.copyOf(subscription.topics()));
+        assertEquals(Collections.singleton(tp2), Set.copyOf(subscription.ownedPartitions()));
         assertEquals(groupInstanceId, subscription.groupInstanceId());
         assertEquals(generationId, subscription.generationId().orElse(DEFAULT_GENERATION));
         assertEquals(rackId, subscription.rackId());
@@ -177,7 +202,30 @@ public class ConsumerProtocolTest {
         for (short version = ConsumerProtocolAssignment.LOWEST_SUPPORTED_VERSION; version <= ConsumerProtocolAssignment.HIGHEST_SUPPORTED_VERSION; version++) {
             ByteBuffer buffer = ConsumerProtocol.serializeAssignment(assignment, version);
             Assignment parsedAssignment = ConsumerProtocol.deserializeAssignment(buffer);
-            assertEquals(toSet(partitions), toSet(parsedAssignment.partitions()));
+            assertEquals(Set.copyOf(partitions), Set.copyOf(parsedAssignment.partitions()));
+            assertEquals(assignment.userData(), parsedAssignment.userData());
+        }
+    }
+
+    @Test
+    public void serializeDeserializeConsumerProtocolAssignmentAllVersions() {
+        ConsumerProtocolAssignment assignment = new ConsumerProtocolAssignment()
+            .setAssignedPartitions(
+                new ConsumerProtocolAssignment.TopicPartitionCollection(Arrays.asList(
+                    new ConsumerProtocolAssignment.TopicPartition()
+                        .setTopic(tp1.topic())
+                        .setPartitions(Collections.singletonList(tp1.partition())),
+                    new ConsumerProtocolAssignment.TopicPartition()
+                        .setTopic(tp2.topic())
+                        .setPartitions(Collections.singletonList(tp2.partition()))
+                ).iterator())
+            )
+            .setUserData(ByteBuffer.wrap("hello".getBytes()));
+
+        for (short version = ConsumerProtocolAssignment.LOWEST_SUPPORTED_VERSION; version <= ConsumerProtocolAssignment.HIGHEST_SUPPORTED_VERSION; version++) {
+            ByteBuffer buffer = ConsumerProtocol.serializeAssignment(assignment, version);
+            ConsumerProtocolAssignment parsedAssignment = ConsumerProtocol.deserializeConsumerProtocolAssignment(buffer);
+            assertEquals(Set.copyOf(assignment.assignedPartitions()), Set.copyOf(parsedAssignment.assignedPartitions()));
             assertEquals(assignment.userData(), parsedAssignment.userData());
         }
     }
@@ -187,7 +235,7 @@ public class ConsumerProtocolTest {
         List<TopicPartition> partitions = Arrays.asList(tp1, tp2);
         ByteBuffer buffer = ConsumerProtocol.serializeAssignment(new Assignment(partitions, ByteBuffer.wrap(new byte[0])));
         Assignment parsedAssignment = ConsumerProtocol.deserializeAssignment(buffer);
-        assertEquals(toSet(partitions), toSet(parsedAssignment.partitions()));
+        assertEquals(Set.copyOf(partitions), Set.copyOf(parsedAssignment.partitions()));
         assertEquals(0, parsedAssignment.userData().limit());
     }
 
@@ -196,7 +244,7 @@ public class ConsumerProtocolTest {
         List<TopicPartition> partitions = Arrays.asList(tp1, tp2);
         ByteBuffer buffer = ConsumerProtocol.serializeAssignment(new Assignment(partitions, null));
         Assignment parsedAssignment = ConsumerProtocol.deserializeAssignment(buffer);
-        assertEquals(toSet(partitions), toSet(parsedAssignment.partitions()));
+        assertEquals(Set.copyOf(partitions), Set.copyOf(parsedAssignment.partitions()));
         assertNull(parsedAssignment.userData());
     }
 
@@ -205,10 +253,17 @@ public class ConsumerProtocolTest {
         // verify that a new version which adds a field is still parseable
         short version = 100;
 
-        Schema assignmentSchemaV100 = new Schema(new Field("assigned_partitions", new ArrayOf(ConsumerProtocolAssignment.TopicPartition.SCHEMA_0)), new Field("user_data", Type.BYTES), new Field("foo", Type.STRING));
+        Schema assignmentSchemaV100 = new Schema(
+            new Field("assigned_partitions", new ArrayOf(
+                ConsumerProtocolAssignment.TopicPartition.SCHEMA_0)),
+            new Field("user_data", Type.BYTES),
+            new Field("foo", Type.STRING));
 
         Struct assignmentV100 = new Struct(assignmentSchemaV100);
-        assignmentV100.set("assigned_partitions", new Object[]{new Struct(ConsumerProtocolAssignment.TopicPartition.SCHEMA_0).set("topic", tp1.topic()).set("partitions", new Object[]{tp1.partition()})});
+        assignmentV100.set("assigned_partitions",
+            new Object[]{new Struct(ConsumerProtocolAssignment.TopicPartition.SCHEMA_0)
+                .set("topic", tp1.topic())
+                .set("partitions", new Object[]{tp1.partition()})});
         assignmentV100.set("user_data", ByteBuffer.wrap(new byte[0]));
         assignmentV100.set("foo", "bar");
 
@@ -222,19 +277,70 @@ public class ConsumerProtocolTest {
         buffer.flip();
 
         Assignment assignment = ConsumerProtocol.deserializeAssignment(buffer);
-        assertEquals(toSet(Collections.singletonList(tp1)), toSet(assignment.partitions()));
+        assertEquals(Set.of(tp1), Set.copyOf(assignment.partitions()));
+    }
+
+    @Test
+    public void serializeDeserializeConsumerProtocolSubscriptionAllVersions() {
+        List<TopicPartition> ownedPartitions = Arrays.asList(
+            new TopicPartition("foo", 0),
+            new TopicPartition("bar", 0));
+        Subscription subscription = new Subscription(Arrays.asList("foo", "bar"),
+            ByteBuffer.wrap("hello".getBytes()), ownedPartitions, generationId, rackId);
+
+        for (short version = ConsumerProtocolSubscription.LOWEST_SUPPORTED_VERSION; version <= ConsumerProtocolSubscription.HIGHEST_SUPPORTED_VERSION; version++) {
+            ByteBuffer buffer = ConsumerProtocol.serializeSubscription(subscription, version);
+            ConsumerProtocolSubscription parsedSubscription = ConsumerProtocol.deserializeConsumerProtocolSubscription(buffer);
+
+            assertEquals(Set.copyOf(subscription.topics()), Set.copyOf(parsedSubscription.topics()));
+            assertEquals(subscription.userData(), parsedSubscription.userData());
+
+            if (version >= 1) {
+                assertEquals(
+                        Set.of(
+                            new ConsumerProtocolSubscription.TopicPartition().setTopic("foo").setPartitions(Collections.singletonList(0)),
+                            new ConsumerProtocolSubscription.TopicPartition().setTopic("bar").setPartitions(Collections.singletonList(0)
+                    )),
+                        Set.copyOf(parsedSubscription.ownedPartitions())
+                );
+            } else {
+                assertEquals(new ConsumerProtocolSubscription.TopicPartitionCollection(), parsedSubscription.ownedPartitions());
+            }
+
+            if (version >= 2) {
+                assertEquals(generationId, parsedSubscription.generationId());
+            } else {
+                assertEquals(DEFAULT_GENERATION, parsedSubscription.generationId());
+            }
+
+            if (version >= 3) {
+                assertEquals(rackId.get(), parsedSubscription.rackId());
+            } else {
+                assertNull(parsedSubscription.rackId());
+            }
+        }
     }
 
     private ByteBuffer generateFutureSubscriptionVersionData() {
         // verify that a new version which adds a field is still parseable
         short version = 100;
 
-        Schema subscriptionSchemaV100 = new Schema(new Field("topics", new ArrayOf(Type.STRING)), new Field("user_data", Type.NULLABLE_BYTES), new Field("owned_partitions", new ArrayOf(ConsumerProtocolSubscription.TopicPartition.SCHEMA_1)), new Field("generation_id", Type.INT32), new Field("rack_id", Type.STRING), new Field("bar", Type.STRING));
+        Schema subscriptionSchemaV100 = new Schema(
+            new Field("topics", new ArrayOf(Type.STRING)),
+            new Field("user_data", Type.NULLABLE_BYTES),
+            new Field("owned_partitions", new ArrayOf(
+                ConsumerProtocolSubscription.TopicPartition.SCHEMA_1)),
+            new Field("generation_id", Type.INT32),
+            new Field("rack_id", Type.STRING),
+            new Field("bar", Type.STRING));
 
         Struct subscriptionV100 = new Struct(subscriptionSchemaV100);
         subscriptionV100.set("topics", new Object[]{"topic"});
         subscriptionV100.set("user_data", ByteBuffer.wrap(new byte[0]));
-        subscriptionV100.set("owned_partitions", new Object[]{new Struct(ConsumerProtocolSubscription.TopicPartition.SCHEMA_1).set("topic", tp2.topic()).set("partitions", new Object[]{tp2.partition()})});
+        subscriptionV100.set("owned_partitions", new Object[]{new Struct(
+            ConsumerProtocolSubscription.TopicPartition.SCHEMA_1)
+            .set("topic", tp2.topic())
+            .set("partitions", new Object[]{tp2.partition()})});
         subscriptionV100.set("generation_id", generationId);
         subscriptionV100.set("rack_id", rackId.orElse(null));
         subscriptionV100.set("bar", "bar");
