@@ -21,14 +21,20 @@ import org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule;
 import org.apache.kafka.common.security.oauthbearer.OAuthBearerValidatorCallback;
 import org.apache.kafka.common.utils.MockTime;
 import org.apache.kafka.common.utils.Time;
+
 import org.junit.jupiter.api.Test;
 
-import javax.security.auth.callback.Callback;
 import java.nio.charset.StandardCharsets;
-import java.util.*;
+import java.util.Base64;
 import java.util.Base64.Encoder;
+import java.util.Collections;
+import java.util.Map;
 
-import static org.junit.jupiter.api.Assertions.*;
+import javax.security.auth.callback.Callback;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
+import static org.junit.jupiter.api.Assertions.assertNull;
 
 public class OAuthBearerUnsecuredValidatorCallbackHandlerTest {
     private static final String UNSECURED_JWT_HEADER_JSON = "{" + claimOrHeaderText("alg", "none") + "}";
@@ -43,25 +49,16 @@ public class OAuthBearerUnsecuredValidatorCallbackHandlerTest {
     private static final String TOO_EARLY_EXPIRATION_TIME_CLAIM_TEXT = expClaimText(0);
     private static final String ISSUED_AT_CLAIM_TEXT = claimOrHeaderText("iat", MOCK_TIME.milliseconds() / 1000.0);
     private static final String SCOPE_CLAIM_TEXT = claimOrHeaderText("scope", "scope1");
-    private static final Map<String, String> MODULE_OPTIONS_MAP_NO_SCOPE_REQUIRED;
-    static {
-        Map<String, String> tmp = new HashMap<>();
-        tmp.put("unsecuredValidatorPrincipalClaimName", "principal");
-        tmp.put("unsecuredValidatorAllowableClockSkewMs", "1");
-        MODULE_OPTIONS_MAP_NO_SCOPE_REQUIRED = Collections.unmodifiableMap(tmp);
-    }
-    private static final Map<String, String> MODULE_OPTIONS_MAP_REQUIRE_EXISTING_SCOPE;
-    static {
-        Map<String, String> tmp = new HashMap<>();
-        tmp.put("unsecuredValidatorRequiredScope", "scope1");
-        MODULE_OPTIONS_MAP_REQUIRE_EXISTING_SCOPE = Collections.unmodifiableMap(tmp);
-    }
-    private static final Map<String, String> MODULE_OPTIONS_MAP_REQUIRE_ADDITIONAL_SCOPE;
-    static {
-        Map<String, String> tmp = new HashMap<>();
-        tmp.put("unsecuredValidatorRequiredScope", "scope1 scope2");
-        MODULE_OPTIONS_MAP_REQUIRE_ADDITIONAL_SCOPE = Collections.unmodifiableMap(tmp);
-    }
+    private static final Map<String, String> MODULE_OPTIONS_MAP_NO_SCOPE_REQUIRED = Map.of(
+            "unsecuredValidatorPrincipalClaimName", "principal",
+            "unsecuredValidatorAllowableClockSkewMs", "1");
+
+    private static final Map<String, String> MODULE_OPTIONS_MAP_REQUIRE_EXISTING_SCOPE = Map.of(
+            "unsecuredValidatorRequiredScope", "scope1");
+
+    private static final Map<String, String> MODULE_OPTIONS_MAP_REQUIRE_ADDITIONAL_SCOPE = Map.of(
+            "unsecuredValidatorRequiredScope", "scope1 scope2");
+
 
     @Test
     public void validToken() {
@@ -70,22 +67,24 @@ public class OAuthBearerUnsecuredValidatorCallbackHandlerTest {
                     + (includeOptionalIssuedAtClaim ? comma(ISSUED_AT_CLAIM_TEXT) : "") + "}";
             Object validationResult = validationResult(UNSECURED_JWT_HEADER_JSON, claimsJson,
                     MODULE_OPTIONS_MAP_NO_SCOPE_REQUIRED);
-            assertTrue(validationResult instanceof OAuthBearerValidatorCallback);
-            assertTrue(((OAuthBearerValidatorCallback) validationResult).token() instanceof OAuthBearerUnsecuredJws);
+            assertInstanceOf(OAuthBearerValidatorCallback.class, validationResult);
+            assertInstanceOf(OAuthBearerUnsecuredJws.class, ((OAuthBearerValidatorCallback) validationResult).token());
         }
     }
 
     @Test
     public void badOrMissingPrincipal() {
-        for (boolean exists : new boolean[]{true, false}) {
-            String claimsJson = "{" + EXPIRATION_TIME_CLAIM_TEXT + (exists ? comma(BAD_PRINCIPAL_CLAIM_TEXT) : "") + "}";
+        for (boolean exists : new boolean[] {true, false}) {
+            String claimsJson = "{" + EXPIRATION_TIME_CLAIM_TEXT + (exists ? comma(BAD_PRINCIPAL_CLAIM_TEXT) : "")
+                    + "}";
             confirmFailsValidation(UNSECURED_JWT_HEADER_JSON, claimsJson, MODULE_OPTIONS_MAP_NO_SCOPE_REQUIRED);
         }
     }
 
     @Test
     public void tooEarlyExpirationTime() {
-        String claimsJson = "{" + PRINCIPAL_CLAIM_TEXT + comma(ISSUED_AT_CLAIM_TEXT) + comma(TOO_EARLY_EXPIRATION_TIME_CLAIM_TEXT) + "}";
+        String claimsJson = "{" + PRINCIPAL_CLAIM_TEXT + comma(ISSUED_AT_CLAIM_TEXT)
+                + comma(TOO_EARLY_EXPIRATION_TIME_CLAIM_TEXT) + "}";
         confirmFailsValidation(UNSECURED_JWT_HEADER_JSON, claimsJson, MODULE_OPTIONS_MAP_NO_SCOPE_REQUIRED);
     }
 
@@ -94,17 +93,19 @@ public class OAuthBearerUnsecuredValidatorCallbackHandlerTest {
         String claimsJson = "{" + SUB_CLAIM_TEXT + comma(EXPIRATION_TIME_CLAIM_TEXT) + comma(SCOPE_CLAIM_TEXT) + "}";
         Object validationResult = validationResult(UNSECURED_JWT_HEADER_JSON, claimsJson,
                 MODULE_OPTIONS_MAP_REQUIRE_EXISTING_SCOPE);
-        assertTrue(validationResult instanceof OAuthBearerValidatorCallback);
-        assertTrue(((OAuthBearerValidatorCallback) validationResult).token() instanceof OAuthBearerUnsecuredJws);
+        assertInstanceOf(OAuthBearerValidatorCallback.class, validationResult);
+        assertInstanceOf(OAuthBearerUnsecuredJws.class, ((OAuthBearerValidatorCallback) validationResult).token());
     }
 
     @Test
     public void missingRequiredScope() {
         String claimsJson = "{" + SUB_CLAIM_TEXT + comma(EXPIRATION_TIME_CLAIM_TEXT) + comma(SCOPE_CLAIM_TEXT) + "}";
-        confirmFailsValidation(UNSECURED_JWT_HEADER_JSON, claimsJson, MODULE_OPTIONS_MAP_REQUIRE_ADDITIONAL_SCOPE, "[scope1, scope2]");
+        confirmFailsValidation(UNSECURED_JWT_HEADER_JSON, claimsJson, MODULE_OPTIONS_MAP_REQUIRE_ADDITIONAL_SCOPE,
+                "[scope1, scope2]");
     }
 
-    private static void confirmFailsValidation(String headerJson, String claimsJson, Map<String, String> moduleOptionsMap) throws OAuthBearerConfigException, OAuthBearerIllegalTokenException {
+    private static void confirmFailsValidation(String headerJson, String claimsJson,
+            Map<String, String> moduleOptionsMap) throws OAuthBearerConfigException, OAuthBearerIllegalTokenException {
         confirmFailsValidation(headerJson, claimsJson, moduleOptionsMap, null);
     }
 
@@ -112,7 +113,7 @@ public class OAuthBearerUnsecuredValidatorCallbackHandlerTest {
             Map<String, String> moduleOptionsMap, String optionalFailureScope) throws OAuthBearerConfigException,
             OAuthBearerIllegalTokenException {
         Object validationResultObj = validationResult(headerJson, claimsJson, moduleOptionsMap);
-        assertTrue(validationResultObj instanceof OAuthBearerValidatorCallback);
+        assertInstanceOf(OAuthBearerValidatorCallback.class, validationResultObj);
         OAuthBearerValidatorCallback callback = (OAuthBearerValidatorCallback) validationResultObj;
         assertNull(callback.token());
         assertNull(callback.errorOpenIDConfiguration());
@@ -146,7 +147,7 @@ public class OAuthBearerUnsecuredValidatorCallbackHandlerTest {
                 (Map) options);
         OAuthBearerUnsecuredValidatorCallbackHandler callbackHandler = new OAuthBearerUnsecuredValidatorCallbackHandler();
         callbackHandler.configure(Collections.emptyMap(), OAuthBearerLoginModule.OAUTHBEARER_MECHANISM,
-                Arrays.asList(config.getAppConfigurationEntry("KafkaClient")[0]));
+                Collections.singletonList(config.getAppConfigurationEntry("KafkaClient")[0]));
         return callbackHandler;
     }
 
