@@ -16,8 +16,12 @@
  */
 package org.apache.kafka.streams.processor.internals;
 
+import org.apache.kafka.clients.consumer.Consumer;
 import org.apache.kafka.common.MetricName;
 import org.apache.kafka.common.TopicPartition;
+import org.apache.kafka.common.Uuid;
+import org.apache.kafka.common.errors.TimeoutException;
+import org.apache.kafka.common.internals.KafkaFutureImpl;
 import org.apache.kafka.common.metrics.Metrics;
 import org.apache.kafka.common.metrics.Sensor;
 import org.apache.kafka.common.metrics.Sensor.RecordingLevel;
@@ -32,11 +36,27 @@ import org.apache.kafka.streams.errors.TaskCorruptedException;
 import org.apache.kafka.streams.processor.TaskId;
 import org.apache.kafka.streams.processor.internals.Task.State;
 import org.apache.kafka.streams.processor.internals.TaskAndAction.Action;
+
 import org.slf4j.Logger;
 
 import java.time.Duration;
-import java.util.*;
-import java.util.concurrent.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Deque;
+import java.util.HashSet;
+import java.util.Iterator;
+import java.util.LinkedHashMap;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
+import java.util.Queue;
+import java.util.Set;
+import java.util.concurrent.BlockingQueue;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.LinkedBlockingQueue;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.locks.Condition;
 import java.util.concurrent.locks.Lock;
@@ -45,58 +65,78 @@ import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static org.apache.kafka.streams.processor.internals.metrics.StreamsMetricsImpl.*;
+import static org.apache.kafka.streams.processor.internals.metrics.StreamsMetricsImpl.RATE_DESCRIPTION;
+import static org.apache.kafka.streams.processor.internals.metrics.StreamsMetricsImpl.RATIO_DESCRIPTION;
+import static org.apache.kafka.streams.processor.internals.metrics.StreamsMetricsImpl.THREAD_ID_TAG;
 
 public class DefaultStateUpdater implements StateUpdater {
 
-    private final static String BUG_ERROR_MESSAGE = "This indicates a bug. " + "Please report at https://issues.apache.org/jira/projects/KAFKA/issues or to the dev-mailing list (https://kafka.apache.org/contact).";
+    private static final String BUG_ERROR_MESSAGE = "This indicates a bug. " +
+        "Please report at https://issues.apache.org/jira/projects/KAFKA/issues or to the dev-mailing list (https://kafka.apache.org/contact).";
 
     private class StateUpdaterThread extends Thread {
 
         private final ChangelogReader changelogReader;
         private final StateUpdaterMetrics updaterMetrics;
         private final AtomicBoolean isRunning = new AtomicBoolean(true);
+        private final AtomicBoolean isIdle = new AtomicBoolean(false);
         private final Map<TaskId, Task> updatingTasks = new ConcurrentHashMap<>();
         private final Map<TaskId, Task> pausedTasks = new ConcurrentHashMap<>();
 
         private long totalCheckpointLatency = 0L;
 
-        public StateUpdaterThread(final String name, final Metrics metrics, final ChangelogReader changelogReader) {
+        private volatile long fetchDeadlineClientInstanceId = -1L;
+        private volatile KafkaFutureImpl<Uuid> clientInstanceIdFuture = new KafkaFutureImpl<>();
+
+        public StateUpdaterThread(final String name,
+                                  final Metrics metrics,
+                                  final ChangelogReader changelogReader) {
             super(name);
             this.changelogReader = changelogReader;
             this.updaterMetrics = new StateUpdaterMetrics(metrics, name);
         }
 
-        public Collection<Task> getUpdatingTasks() {
+        public Collection<Task> updatingTasks() {
             return updatingTasks.values();
         }
 
-        public Collection<StandbyTask> getUpdatingStandbyTasks() {
-            return updatingTasks.values().stream().filter(t -> !t.isActive()).map(t -> (StandbyTask) t).collect(Collectors.toList());
+        public Collection<StandbyTask> updatingStandbyTasks() {
+            return updatingTasks.values().stream()
+                .filter(t -> !t.isActive())
+                .map(t -> (StandbyTask) t)
+                .collect(Collectors.toList());
         }
 
         private boolean onlyStandbyTasksUpdating() {
             return !updatingTasks.isEmpty() && updatingTasks.values().stream().noneMatch(Task::isActive);
         }
 
-        public Collection<Task> getPausedTasks() {
+        public Collection<Task> pausedTasks() {
             return pausedTasks.values();
         }
 
-        public long getNumUpdatingStandbyTasks() {
-            return updatingTasks.values().stream().filter(t -> !t.isActive()).count();
+        public long numUpdatingStandbyTasks() {
+            return updatingTasks.values().stream()
+                .filter(t -> !t.isActive())
+                .count();
         }
 
-        public long getNumRestoringActiveTasks() {
-            return updatingTasks.values().stream().filter(Task::isActive).count();
+        public long numRestoringActiveTasks() {
+            return updatingTasks.values().stream()
+                .filter(Task::isActive)
+                .count();
         }
 
-        public long getNumPausedStandbyTasks() {
-            return pausedTasks.values().stream().filter(t -> !t.isActive()).count();
+        public long numPausedStandbyTasks() {
+            return pausedTasks.values().stream()
+                .filter(t -> !t.isActive())
+                .count();
         }
 
-        public long getNumPausedActiveTasks() {
-            return pausedTasks.values().stream().filter(Task::isActive).count();
+        public long numPausedActiveTasks() {
+            return pausedTasks.values().stream()
+                .filter(Task::isActive)
+                .count();
         }
 
         @Override
@@ -109,11 +149,19 @@ public class DefaultStateUpdater implements StateUpdater {
             } catch (final RuntimeException anyOtherException) {
                 handleRuntimeException(anyOtherException);
             } finally {
-                removeAddedTasksFromInputQueue();
-                removeUpdatingAndPausedTasks();
+                clearInputQueue();
+                clearUpdatingAndPausedTasks();
                 updaterMetrics.clear();
-                shutdownGate.countDown();
                 log.info("State updater thread stopped");
+            }
+        }
+
+        private void clearInputQueue() {
+            tasksAndActionsLock.lock();
+            try {
+                tasksAndActions.clear();
+            } finally {
+                tasksAndActionsLock.unlock();
             }
         }
 
@@ -134,6 +182,8 @@ public class DefaultStateUpdater implements StateUpdater {
             pauseTasks();
             restoreTasks(totalStartTimeMs);
 
+            maybeGetClientInstanceIds();
+
             final long checkpointStartTimeMs = time.milliseconds();
             maybeCheckpointTasks(checkpointStartTimeMs);
 
@@ -150,15 +200,21 @@ public class DefaultStateUpdater implements StateUpdater {
         private void performActionsOnTasks() {
             tasksAndActionsLock.lock();
             try {
-                for (final TaskAndAction taskAndAction : getTasksAndActions()) {
-                    final Action action = taskAndAction.getAction();
+                for (final TaskAndAction taskAndAction : tasksAndActions()) {
+                    final Action action = taskAndAction.action();
                     switch (action) {
                         case ADD:
-                            addTask(taskAndAction.getTask());
+                            addTask(taskAndAction.task());
                             break;
                         case REMOVE:
-                            removeTask(taskAndAction.getTaskId());
+                            if (taskAndAction.futureForRemove() == null) {
+                                removeTask(taskAndAction.taskId());
+                            } else {
+                                removeTask(taskAndAction.taskId(), taskAndAction.futureForRemove());
+                            }
                             break;
+                        default:
+                            throw new IllegalStateException("Unknown action type " + action);
                     }
                 }
             } finally {
@@ -200,9 +256,72 @@ public class DefaultStateUpdater implements StateUpdater {
             }
         }
 
+        private void maybeGetClientInstanceIds() {
+            if (fetchDeadlineClientInstanceId != -1) {
+                if (!clientInstanceIdFuture.isDone()) {
+                    if (fetchDeadlineClientInstanceId >= time.milliseconds()) {
+                        try {
+                            // if the state-updated thread has active work:
+                            //    we pass in a timeout of zero into each `clientInstanceId()` call
+                            //    to just trigger the "get instance id" background RPC;
+                            //    we don't want to block the state updater thread that can do useful work in the meantime
+                            // otherwise, we pass in 100ms to avoid busy waiting
+                            clientInstanceIdFuture.complete(
+                                restoreConsumer.clientInstanceId(
+                                    allWorkDone() ? Duration.ofMillis(100L) : Duration.ZERO
+                                )
+                            );
+                            fetchDeadlineClientInstanceId = -1L;
+                        } catch (final IllegalStateException disabledError) {
+                            // if telemetry is disabled on a client, we swallow the error,
+                            // to allow returning a partial result for all other clients
+                            clientInstanceIdFuture.complete(null);
+                            fetchDeadlineClientInstanceId = -1L;
+                        } catch (final TimeoutException swallow) {
+                            // swallow
+                        } catch (final Exception error) {
+                            clientInstanceIdFuture.completeExceptionally(error);
+                            fetchDeadlineClientInstanceId = -1L;
+                        }
+                    } else {
+                        clientInstanceIdFuture.completeExceptionally(
+                            new TimeoutException("Could not retrieve restore consumer client instance id.")
+                        );
+                        fetchDeadlineClientInstanceId = -1L;
+                    }
+                }
+            }
+        }
+
+        private KafkaFutureImpl<Uuid> restoreConsumerInstanceId(final Duration timeout) {
+            boolean setDeadline = false;
+
+            if (clientInstanceIdFuture.isDone()) {
+                if (clientInstanceIdFuture.isCompletedExceptionally()) {
+                    clientInstanceIdFuture = new KafkaFutureImpl<>();
+                    setDeadline = true;
+                }
+            } else {
+                setDeadline = true;
+            }
+
+            if (setDeadline) {
+                fetchDeadlineClientInstanceId = time.milliseconds() + timeout.toMillis();
+                tasksAndActionsLock.lock();
+                try {
+                    tasksAndActionsCondition.signalAll();
+                } finally {
+                    tasksAndActionsLock.unlock();
+                }
+            }
+
+            return clientInstanceIdFuture;
+        }
+
+
         private void handleRuntimeException(final RuntimeException runtimeException) {
-            log.error("An unexpected error occurred within the state updater thread: " + runtimeException);
-            addToExceptionsAndFailedTasksThenClearUpdatingTasks(new ExceptionAndTasks(new HashSet<>(updatingTasks.values()), runtimeException));
+            log.error("An unexpected error occurred within the state updater thread: {}", String.valueOf(runtimeException));
+            addToExceptionsAndFailedTasksThenClearUpdatingAndPausedTasks(runtimeException);
             isRunning.set(false);
         }
 
@@ -221,7 +340,9 @@ public class DefaultStateUpdater implements StateUpdater {
                 changelogsOfCorruptedTasks.addAll(corruptedTask.changelogPartitions());
             }
             changelogReader.unregister(changelogsOfCorruptedTasks);
-            addToExceptionsAndFailedTasksThenRemoveFromUpdatingTasks(new ExceptionAndTasks(corruptedTasks, taskCorruptedException));
+            corruptedTasks.forEach(
+                task -> addToExceptionsAndFailedTasksThenRemoveFromUpdatingTasks(new ExceptionAndTask(taskCorruptedException, task))
+            );
         }
 
         // TODO: we can let the exception encode the actual corrupted changelog partitions and only
@@ -244,39 +365,73 @@ public class DefaultStateUpdater implements StateUpdater {
 
         private void handleStreamsExceptionWithTask(final StreamsException streamsException) {
             final TaskId failedTaskId = streamsException.taskId().get();
-            if (!updatingTasks.containsKey(failedTaskId)) {
-                throw new IllegalStateException("Task " + failedTaskId + " failed but is not updating. " + BUG_ERROR_MESSAGE);
+            if (updatingTasks.containsKey(failedTaskId)) {
+                addToExceptionsAndFailedTasksThenRemoveFromUpdatingTasks(
+                    new ExceptionAndTask(streamsException, updatingTasks.get(failedTaskId))
+                );
+            } else if (pausedTasks.containsKey(failedTaskId)) {
+                addToExceptionsAndFailedTasksThenRemoveFromPausedTasks(
+                    new ExceptionAndTask(streamsException, pausedTasks.get(failedTaskId))
+                );
+            } else {
+                throw new IllegalStateException("Task " + failedTaskId + " failed but is not updating or paused. " + BUG_ERROR_MESSAGE);
             }
-            final Set<Task> failedTask = new HashSet<>();
-            failedTask.add(updatingTasks.get(failedTaskId));
-            addToExceptionsAndFailedTasksThenRemoveFromUpdatingTasks(new ExceptionAndTasks(failedTask, streamsException));
         }
 
         private void handleStreamsExceptionWithoutTask(final StreamsException streamsException) {
-            addToExceptionsAndFailedTasksThenClearUpdatingTasks(new ExceptionAndTasks(new HashSet<>(updatingTasks.values()), streamsException));
+            addToExceptionsAndFailedTasksThenClearUpdatingAndPausedTasks(streamsException);
         }
 
         // It is important to remove the corrupted tasks from the updating tasks after they were added to the
         // failed tasks.
         // This ensures that all tasks are found in DefaultStateUpdater#getTasks().
-        private void addToExceptionsAndFailedTasksThenRemoveFromUpdatingTasks(final ExceptionAndTasks exceptionAndTasks) {
-            exceptionsAndFailedTasks.add(exceptionAndTasks);
-            exceptionAndTasks.getTasks().stream().map(Task::id).forEach(updatingTasks::remove);
-            if (exceptionAndTasks.getTasks().stream().anyMatch(Task::isActive)) {
-                transitToUpdateStandbysIfOnlyStandbysLeft();
+        private void addToExceptionsAndFailedTasksThenRemoveFromUpdatingTasks(final ExceptionAndTask exceptionAndTask) {
+            exceptionsAndFailedTasksLock.lock();
+            try {
+                exceptionsAndFailedTasks.add(exceptionAndTask);
+                updatingTasks.remove(exceptionAndTask.task().id());
+                if (exceptionAndTask.task().isActive()) {
+                    transitToUpdateStandbysIfOnlyStandbysLeft();
+                }
+            } finally {
+                exceptionsAndFailedTasksLock.unlock();
             }
         }
 
-        private void addToExceptionsAndFailedTasksThenClearUpdatingTasks(final ExceptionAndTasks exceptionAndTasks) {
-            exceptionsAndFailedTasks.add(exceptionAndTasks);
-            updatingTasks.clear();
+        private void addToExceptionsAndFailedTasksThenRemoveFromPausedTasks(final ExceptionAndTask exceptionAndTask) {
+            exceptionsAndFailedTasksLock.lock();
+            try {
+                exceptionsAndFailedTasks.add(exceptionAndTask);
+                pausedTasks.remove(exceptionAndTask.task().id());
+                if (exceptionAndTask.task().isActive()) {
+                    transitToUpdateStandbysIfOnlyStandbysLeft();
+                }
+            } finally {
+                exceptionsAndFailedTasksLock.unlock();
+            }
+        }
+
+        private void addToExceptionsAndFailedTasksThenClearUpdatingAndPausedTasks(final RuntimeException runtimeException) {
+            exceptionsAndFailedTasksLock.lock();
+            try {
+                updatingTasks.values().forEach(
+                    task -> exceptionsAndFailedTasks.add(new ExceptionAndTask(runtimeException, task))
+                );
+                updatingTasks.clear();
+                pausedTasks.values().forEach(
+                    task -> exceptionsAndFailedTasks.add(new ExceptionAndTask(runtimeException, task))
+                );
+                pausedTasks.clear();
+            } finally {
+                exceptionsAndFailedTasksLock.unlock();
+            }
         }
 
         private void waitIfAllChangelogsCompletelyRead() {
             tasksAndActionsLock.lock();
             try {
-                while (isRunning.get() && changelogReader.allChangelogsCompleted() && tasksAndActions.isEmpty() && !isTopologyResumed.get()) {
-
+                while (allWorkDone() && fetchDeadlineClientInstanceId == -1L) {
+                    isIdle.set(true);
                     tasksAndActionsCondition.await();
                 }
             } catch (final InterruptedException ignored) {
@@ -284,23 +439,26 @@ public class DefaultStateUpdater implements StateUpdater {
                 // and hence this exception should never be thrown
             } finally {
                 tasksAndActionsLock.unlock();
+                isIdle.set(false);
             }
         }
 
-        private void removeUpdatingAndPausedTasks() {
-            changelogReader.clear();
-            measureCheckpointLatency(() -> updatingTasks.forEach((id, task) -> {
-                task.maybeCheckpoint(true);
-                removedTasks.add(task);
-            }));
-            updatingTasks.clear();
-            pausedTasks.forEach((id, task) -> {
-                removedTasks.add(task);
-            });
-            pausedTasks.clear();
+        private boolean allWorkDone() {
+            final boolean noTasksToUpdate = changelogReader.allChangelogsCompleted() || updatingTasks.isEmpty();
+
+            return isRunning.get() &&
+                noTasksToUpdate &&
+                tasksAndActions.isEmpty() &&
+                !isTopologyResumed.get();
         }
 
-        private List<TaskAndAction> getTasksAndActions() {
+        private void clearUpdatingAndPausedTasks() {
+            updatingTasks.clear();
+            pausedTasks.clear();
+            changelogReader.clear();
+        }
+
+        private List<TaskAndAction> tasksAndActions() {
             final List<TaskAndAction> tasksAndActionsToProcess = new ArrayList<>(tasksAndActions);
             tasksAndActions.clear();
             return tasksAndActionsToProcess;
@@ -311,11 +469,17 @@ public class DefaultStateUpdater implements StateUpdater {
 
             Task existingTask = pausedTasks.get(taskId);
             if (existingTask != null) {
-                throw new IllegalStateException((existingTask.isActive() ? "Active" : "Standby") + " task " + taskId + " already exist in paused tasks, " + "should not try to add another " + (task.isActive() ? "active" : "standby") + " task with the same id. " + BUG_ERROR_MESSAGE);
+                throw new IllegalStateException(
+                    (existingTask.isActive() ? "Active" : "Standby") + " task " + taskId + " already exist in paused tasks, " +
+                        "should not try to add another " + (task.isActive() ? "active" : "standby") + " task with the same id. "
+                        + BUG_ERROR_MESSAGE);
             }
             existingTask = updatingTasks.get(taskId);
             if (existingTask != null) {
-                throw new IllegalStateException((existingTask.isActive() ? "Active" : "Standby") + " task " + taskId + " already exist in updating tasks, " + "should not try to add another " + (task.isActive() ? "active" : "standby") + " task with the same id. " + BUG_ERROR_MESSAGE);
+                throw new IllegalStateException(
+                    (existingTask.isActive() ? "Active" : "Standby") + " task " + taskId + " already exist in updating tasks, " +
+                        "should not try to add another " + (task.isActive() ? "active" : "standby") + " task with the same id. "
+                        + BUG_ERROR_MESSAGE);
             }
 
             if (isStateless(task)) {
@@ -324,7 +488,8 @@ public class DefaultStateUpdater implements StateUpdater {
             } else if (topologyMetadata.isPaused(taskId.topologyName())) {
                 pausedTasks.put(taskId, task);
                 changelogReader.register(task.changelogPartitions(), task.stateManager());
-                log.debug((task.isActive() ? "Active" : "Standby") + " task " + taskId + " was directly added to the paused tasks.");
+                log.debug((task.isActive() ? "Active" : "Standby")
+                    + " task " + taskId + " was directly added to the paused tasks.");
             } else {
                 updatingTasks.put(taskId, task);
                 changelogReader.register(task.changelogPartitions(), task.stateManager());
@@ -340,6 +505,107 @@ public class DefaultStateUpdater implements StateUpdater {
             }
         }
 
+        private void removeTask(final TaskId taskId, final CompletableFuture<RemovedTaskResult> future) {
+            try {
+                if (!removeUpdatingTask(taskId, future)
+                    && !removePausedTask(taskId, future)
+                    && !removeRestoredTask(taskId, future)
+                    && !removeFailedTask(taskId, future)) {
+
+                    future.complete(null);
+                    log.warn("Task {} could not be removed from the state updater because the state updater does not"
+                        + " own this task.", taskId);
+                }
+            } catch (final StreamsException streamsException) {
+                handleStreamsException(streamsException);
+                future.completeExceptionally(streamsException);
+            } catch (final RuntimeException runtimeException) {
+                handleRuntimeException(runtimeException);
+                future.completeExceptionally(runtimeException);
+            }
+        }
+
+        private boolean removeUpdatingTask(final TaskId taskId, final CompletableFuture<RemovedTaskResult> future) {
+            if (!updatingTasks.containsKey(taskId)) {
+                return false;
+            }
+            final Task task = updatingTasks.get(taskId);
+            prepareUpdatingTaskForRemoval(task);
+            updatingTasks.remove(taskId);
+            if (task.isActive()) {
+                transitToUpdateStandbysIfOnlyStandbysLeft();
+            }
+            log.info((task.isActive() ? "Active" : "Standby")
+                + " task " + task.id() + " was removed from the updating tasks.");
+            future.complete(new RemovedTaskResult(task));
+            return true;
+        }
+
+        private void prepareUpdatingTaskForRemoval(final Task task) {
+            measureCheckpointLatency(() -> task.maybeCheckpoint(true));
+            final Collection<TopicPartition> changelogPartitions = task.changelogPartitions();
+            changelogReader.unregister(changelogPartitions);
+        }
+
+        private boolean removePausedTask(final TaskId taskId, final CompletableFuture<RemovedTaskResult> future) {
+            if (!pausedTasks.containsKey(taskId)) {
+                return false;
+            }
+            final Task task = pausedTasks.get(taskId);
+            preparePausedTaskForRemoval(task);
+            pausedTasks.remove(taskId);
+            log.info((task.isActive() ? "Active" : "Standby")
+                + " task " + task.id() + " was removed from the paused tasks.");
+            future.complete(new RemovedTaskResult(task));
+            return true;
+        }
+
+        private void preparePausedTaskForRemoval(final Task task) {
+            final Collection<TopicPartition> changelogPartitions = task.changelogPartitions();
+            changelogReader.unregister(changelogPartitions);
+        }
+
+        private boolean removeRestoredTask(final TaskId taskId, final CompletableFuture<RemovedTaskResult> future) {
+            restoredActiveTasksLock.lock();
+            try {
+                final Iterator<StreamTask> iterator = restoredActiveTasks.iterator();
+                while (iterator.hasNext()) {
+                    final StreamTask restoredTask = iterator.next();
+                    if (restoredTask.id().equals(taskId)) {
+                        iterator.remove();
+                        log.info((restoredTask.isActive() ? "Active" : "Standby")
+                            + " task " + restoredTask.id() + " was removed from the restored tasks.");
+                        future.complete(new RemovedTaskResult(restoredTask));
+                        return true;
+                    }
+                }
+                return false;
+            } finally {
+                restoredActiveTasksLock.unlock();
+            }
+        }
+
+        private boolean removeFailedTask(final TaskId taskId, final CompletableFuture<RemovedTaskResult> future) {
+            exceptionsAndFailedTasksLock.lock();
+            try {
+                final Iterator<ExceptionAndTask> iterator = exceptionsAndFailedTasks.iterator();
+                while (iterator.hasNext()) {
+                    final ExceptionAndTask exceptionAndTask = iterator.next();
+                    final Task failedTask = exceptionAndTask.task();
+                    if (failedTask.id().equals(taskId)) {
+                        iterator.remove();
+                        log.info((failedTask.isActive() ? "Active" : "Standby")
+                            + " task " + failedTask.id() + " was removed from the failed tasks.");
+                        future.complete(new RemovedTaskResult(failedTask, exceptionAndTask.exception()));
+                        return true;
+                    }
+                }
+                return false;
+            } finally {
+                exceptionsAndFailedTasksLock.unlock();
+            }
+        }
+
         private void removeTask(final TaskId taskId) {
             final Task task;
             if (updatingTasks.containsKey(taskId)) {
@@ -352,14 +618,16 @@ public class DefaultStateUpdater implements StateUpdater {
                 if (task.isActive()) {
                     transitToUpdateStandbysIfOnlyStandbysLeft();
                 }
-                log.info((task.isActive() ? "Active" : "Standby") + " task " + task.id() + " was removed from the updating tasks and added to the removed tasks.");
+                log.info((task.isActive() ? "Active" : "Standby")
+                    + " task " + task.id() + " was removed from the updating tasks and added to the removed tasks.");
             } else if (pausedTasks.containsKey(taskId)) {
                 task = pausedTasks.get(taskId);
                 final Collection<TopicPartition> changelogPartitions = task.changelogPartitions();
                 changelogReader.unregister(changelogPartitions);
                 removedTasks.add(task);
                 pausedTasks.remove(taskId);
-                log.info((task.isActive() ? "Active" : "Standby") + " task " + task.id() + " was removed from the paused tasks and added to the removed tasks.");
+                log.info((task.isActive() ? "Active" : "Standby")
+                    + " task " + task.id() + " was removed from the paused tasks and added to the removed tasks.");
             } else {
                 log.info("Task " + taskId + " was not removed since it is not updating or paused.");
             }
@@ -374,7 +642,8 @@ public class DefaultStateUpdater implements StateUpdater {
             if (task.isActive()) {
                 transitToUpdateStandbysIfOnlyStandbysLeft();
             }
-            log.info((task.isActive() ? "Active" : "Standby") + " task " + task.id() + " was paused from the updating tasks and added to the paused tasks.");
+            log.info((task.isActive() ? "Active" : "Standby")
+                + " task " + task.id() + " was paused from the updating tasks and added to the paused tasks.");
         }
 
         private void resumeTask(final Task task) {
@@ -397,13 +666,13 @@ public class DefaultStateUpdater implements StateUpdater {
             return task.changelogPartitions().isEmpty() && task.isActive();
         }
 
-        private void maybeCompleteRestoration(final StreamTask task, final Set<TopicPartition> restoredChangelogs) {
+        private void maybeCompleteRestoration(final StreamTask task,
+                                              final Set<TopicPartition> restoredChangelogs) {
             final Collection<TopicPartition> changelogPartitions = task.changelogPartitions();
             if (restoredChangelogs.containsAll(changelogPartitions)) {
                 measureCheckpointLatency(() -> task.maybeCheckpoint(true));
                 changelogReader.unregister(changelogPartitions);
                 addToRestoredTasks(task);
-                updatingTasks.remove(task.id());
                 log.info("Stateful active task " + task.id() + " completed restoration");
                 transitToUpdateStandbysIfOnlyStandbysLeft();
             }
@@ -419,6 +688,7 @@ public class DefaultStateUpdater implements StateUpdater {
             restoredActiveTasksLock.lock();
             try {
                 restoredActiveTasks.add(task);
+                updatingTasks.remove(task.id());
                 log.debug("Active task " + task.id() + " was added to the restored tasks");
                 restoredActiveTasksCondition.signalAll();
             } finally {
@@ -430,7 +700,8 @@ public class DefaultStateUpdater implements StateUpdater {
             final long elapsedMsSinceLastCommit = now - lastCommitMs;
             if (elapsedMsSinceLastCommit > commitIntervalMs) {
                 if (log.isDebugEnabled()) {
-                    log.debug("Checkpointing state of all restoring tasks since {}ms has elapsed (commit interval is {}ms)", elapsedMsSinceLastCommit, commitIntervalMs);
+                    log.debug("Checkpointing state of all restoring tasks since {}ms has elapsed (commit interval is {}ms)",
+                        elapsedMsSinceLastCommit, commitIntervalMs);
                 }
 
                 measureCheckpointLatency(() -> {
@@ -475,6 +746,7 @@ public class DefaultStateUpdater implements StateUpdater {
     private final Logger log;
     private final String name;
     private final Metrics metrics;
+    private final Consumer<byte[], byte[]> restoreConsumer;
     private final ChangelogReader changelogReader;
     private final TopologyMetadata topologyMetadata;
     private final Queue<TaskAndAction> tasksAndActions = new LinkedList<>();
@@ -483,7 +755,8 @@ public class DefaultStateUpdater implements StateUpdater {
     private final Queue<StreamTask> restoredActiveTasks = new LinkedList<>();
     private final Lock restoredActiveTasksLock = new ReentrantLock();
     private final Condition restoredActiveTasksCondition = restoredActiveTasksLock.newCondition();
-    private final BlockingQueue<ExceptionAndTasks> exceptionsAndFailedTasks = new LinkedBlockingQueue<>();
+    private final Lock exceptionsAndFailedTasksLock = new ReentrantLock();
+    private final Queue<ExceptionAndTask> exceptionsAndFailedTasks = new LinkedList<>();
     private final BlockingQueue<Task> removedTasks = new LinkedBlockingQueue<>();
     private final AtomicBoolean isTopologyResumed = new AtomicBoolean(false);
 
@@ -491,12 +764,18 @@ public class DefaultStateUpdater implements StateUpdater {
     private long lastCommitMs;
 
     private StateUpdaterThread stateUpdaterThread = null;
-    private CountDownLatch shutdownGate;
 
-    public DefaultStateUpdater(final String name, final Metrics metrics, final StreamsConfig config, final ChangelogReader changelogReader, final TopologyMetadata topologyMetadata, final Time time) {
+    public DefaultStateUpdater(final String name,
+                               final Metrics metrics,
+                               final StreamsConfig config,
+                               final Consumer<byte[], byte[]> restoreConsumer,
+                               final ChangelogReader changelogReader,
+                               final TopologyMetadata topologyMetadata,
+                               final Time time) {
         this.time = time;
         this.name = name;
         this.metrics = metrics;
+        this.restoreConsumer = restoreConsumer;
         this.changelogReader = changelogReader;
         this.topologyMetadata = topologyMetadata;
         this.commitIntervalMs = config.getLong(StreamsConfig.COMMIT_INTERVAL_MS_CONFIG);
@@ -508,9 +787,12 @@ public class DefaultStateUpdater implements StateUpdater {
 
     public void start() {
         if (stateUpdaterThread == null) {
+            if (!restoredActiveTasks.isEmpty() || !exceptionsAndFailedTasks.isEmpty()) {
+                throw new IllegalStateException("State updater started with non-empty output queues. "
+                    + BUG_ERROR_MESSAGE);
+            }
             stateUpdaterThread = new StateUpdaterThread(name, metrics, changelogReader);
             stateUpdaterThread.start();
-            shutdownGate = new CountDownLatch(1);
 
             // initialize the last commit as of now to prevent first commit happens immediately
             this.lastCommitMs = time.milliseconds();
@@ -535,29 +817,13 @@ public class DefaultStateUpdater implements StateUpdater {
             }
 
             try {
-                if (!shutdownGate.await(timeout.toMillis(), TimeUnit.MILLISECONDS)) {
+                stateUpdaterThread.join(timeout.toMillis());
+                if (stateUpdaterThread.isAlive()) {
                     throw new StreamsException("State updater thread did not shutdown within the timeout");
                 }
                 stateUpdaterThread = null;
             } catch (final InterruptedException ignored) {
             }
-        } else {
-            removeAddedTasksFromInputQueue();
-        }
-    }
-
-    private void removeAddedTasksFromInputQueue() {
-        tasksAndActionsLock.lock();
-        try {
-            TaskAndAction taskAndAction;
-            while ((taskAndAction = tasksAndActions.peek()) != null) {
-                if (taskAndAction.getAction() == Action.ADD) {
-                    removedTasks.add(taskAndAction.getTask());
-                }
-                tasksAndActions.poll();
-            }
-        } finally {
-            tasksAndActionsLock.unlock();
         }
     }
 
@@ -584,14 +850,16 @@ public class DefaultStateUpdater implements StateUpdater {
     }
 
     @Override
-    public void remove(final TaskId taskId) {
+    public CompletableFuture<RemovedTaskResult> remove(final TaskId taskId) {
+        final CompletableFuture<RemovedTaskResult> future = new CompletableFuture<>();
         tasksAndActionsLock.lock();
         try {
-            tasksAndActions.add(TaskAndAction.createRemoveTask(taskId));
+            tasksAndActions.add(TaskAndAction.createRemoveTask(taskId, future));
             tasksAndActionsCondition.signalAll();
         } finally {
             tasksAndActionsLock.unlock();
         }
+        return future;
     }
 
     @Override
@@ -634,94 +902,145 @@ public class DefaultStateUpdater implements StateUpdater {
     }
 
     @Override
-    public Set<Task> drainRemovedTasks() {
-        final List<Task> result = new ArrayList<>();
-        removedTasks.drainTo(result);
-        return new HashSet<>(result);
-    }
-
-    public boolean hasRemovedTasks() {
-        return !removedTasks.isEmpty();
-    }
-
-    @Override
-    public List<ExceptionAndTasks> drainExceptionsAndFailedTasks() {
-        final List<ExceptionAndTasks> result = new ArrayList<>();
-        exceptionsAndFailedTasks.drainTo(result);
+    public List<ExceptionAndTask> drainExceptionsAndFailedTasks() {
+        final List<ExceptionAndTask> result = new ArrayList<>();
+        exceptionsAndFailedTasksLock.lock();
+        try {
+            result.addAll(exceptionsAndFailedTasks);
+            exceptionsAndFailedTasks.clear();
+        } finally {
+            exceptionsAndFailedTasksLock.unlock();
+        }
         return result;
     }
 
     @Override
     public boolean hasExceptionsAndFailedTasks() {
-        return !exceptionsAndFailedTasks.isEmpty();
+        exceptionsAndFailedTasksLock.lock();
+        try {
+            return !exceptionsAndFailedTasks.isEmpty();
+        } finally {
+            exceptionsAndFailedTasksLock.unlock();
+        }
     }
 
-    public Set<StandbyTask> getUpdatingStandbyTasks() {
-        return stateUpdaterThread != null ? Collections.unmodifiableSet(new HashSet<>(stateUpdaterThread.getUpdatingStandbyTasks())) : Collections.emptySet();
+    public Set<StandbyTask> updatingStandbyTasks() {
+        return stateUpdaterThread != null
+            ? Set.copyOf(stateUpdaterThread.updatingStandbyTasks())
+            : Collections.emptySet();
     }
 
     @Override
-    public Set<Task> getUpdatingTasks() {
-        return stateUpdaterThread != null ? Collections.unmodifiableSet(new HashSet<>(stateUpdaterThread.getUpdatingTasks())) : Collections.emptySet();
+    public Set<Task> updatingTasks() {
+        return stateUpdaterThread != null
+            ? Set.copyOf(stateUpdaterThread.updatingTasks())
+            : Collections.emptySet();
     }
 
-    public Set<StreamTask> getRestoredActiveTasks() {
+    public Set<StreamTask> restoredActiveTasks() {
         restoredActiveTasksLock.lock();
         try {
-            return Collections.unmodifiableSet(new HashSet<>(restoredActiveTasks));
+            return Set.copyOf(restoredActiveTasks);
         } finally {
             restoredActiveTasksLock.unlock();
         }
     }
 
-    public List<ExceptionAndTasks> getExceptionsAndFailedTasks() {
-        return Collections.unmodifiableList(new ArrayList<>(exceptionsAndFailedTasks));
+    public List<ExceptionAndTask> exceptionsAndFailedTasks() {
+        exceptionsAndFailedTasksLock.lock();
+        try {
+            return List.copyOf(exceptionsAndFailedTasks);
+        } finally {
+            exceptionsAndFailedTasksLock.unlock();
+        }
     }
 
-    public Set<Task> getRemovedTasks() {
-        return Collections.unmodifiableSet(new HashSet<>(removedTasks));
+    public Set<Task> removedTasks() {
+        return Set.copyOf(removedTasks);
     }
 
-    public Set<Task> getPausedTasks() {
-        return stateUpdaterThread != null ? Collections.unmodifiableSet(new HashSet<>(stateUpdaterThread.getPausedTasks())) : Collections.emptySet();
+    public Set<Task> pausedTasks() {
+        return stateUpdaterThread != null
+            ? Set.copyOf(stateUpdaterThread.pausedTasks())
+            : Collections.emptySet();
     }
 
     @Override
-    public Set<Task> getTasks() {
-        return executeWithQueuesLocked(() -> getStreamOfTasks().map(ReadOnlyTask::new).collect(Collectors.toSet()));
+    public Set<Task> tasks() {
+        return executeWithQueuesLocked(() -> streamOfTasks().map(ReadOnlyTask::new).collect(Collectors.toSet()));
     }
 
     @Override
     public boolean restoresActiveTasks() {
-        return !executeWithQueuesLocked(() -> getStreamOfTasks().filter(Task::isActive).collect(Collectors.toSet())).isEmpty();
+        return !executeWithQueuesLocked(
+            () -> streamOfTasks().filter(Task::isActive).collect(Collectors.toSet())
+        ).isEmpty();
     }
 
-    public Set<StreamTask> getActiveTasks() {
-        return executeWithQueuesLocked(() -> getStreamOfTasks().filter(Task::isActive).map(t -> (StreamTask) t).collect(Collectors.toSet()));
+    public Set<StreamTask> activeTasks() {
+        return executeWithQueuesLocked(
+            () -> streamOfTasks().filter(Task::isActive).map(t -> (StreamTask) t).collect(Collectors.toSet())
+        );
     }
 
     @Override
-    public Set<StandbyTask> getStandbyTasks() {
-        return executeWithQueuesLocked(() -> getStreamOfTasks().filter(t -> !t.isActive()).map(t -> (StandbyTask) t).collect(Collectors.toSet()));
+    public Set<StandbyTask> standbyTasks() {
+        return executeWithQueuesLocked(
+            () -> streamOfTasks().filter(t -> !t.isActive()).map(t -> (StandbyTask) t).collect(Collectors.toSet())
+        );
+    }
+
+    @Override
+    public KafkaFutureImpl<Uuid> restoreConsumerInstanceId(final Duration timeout) {
+        return stateUpdaterThread.restoreConsumerInstanceId(timeout);
+    }
+
+    public boolean isRunning() {
+        return stateUpdaterThread != null && stateUpdaterThread.isRunning.get();
+    }
+
+    // used for testing
+    boolean isIdle() {
+        if (stateUpdaterThread != null) {
+            return stateUpdaterThread.isIdle.get();
+        }
+        return false;
     }
 
     private <T> Set<T> executeWithQueuesLocked(final Supplier<Set<T>> action) {
         tasksAndActionsLock.lock();
         restoredActiveTasksLock.lock();
+        exceptionsAndFailedTasksLock.lock();
         try {
             return action.get();
         } finally {
+            exceptionsAndFailedTasksLock.unlock();
             restoredActiveTasksLock.unlock();
             tasksAndActionsLock.unlock();
         }
     }
 
-    private Stream<Task> getStreamOfTasks() {
-        return Stream.concat(getStreamOfNonPausedTasks(), getPausedTasks().stream());
+    private Stream<Task> streamOfTasks() {
+        return
+            Stream.concat(
+                streamOfNonPausedTasks(),
+                pausedTasks().stream()
+            );
     }
 
-    private Stream<Task> getStreamOfNonPausedTasks() {
-        return Stream.concat(tasksAndActions.stream().filter(taskAndAction -> taskAndAction.getAction() == Action.ADD).map(TaskAndAction::getTask), Stream.concat(getUpdatingTasks().stream(), Stream.concat(restoredActiveTasks.stream(), Stream.concat(exceptionsAndFailedTasks.stream().flatMap(exceptionAndTasks -> exceptionAndTasks.getTasks().stream()), removedTasks.stream()))));
+    private Stream<Task> streamOfNonPausedTasks() {
+        return
+            Stream.concat(
+                tasksAndActions.stream()
+                    .filter(taskAndAction -> taskAndAction.action() == Action.ADD)
+                    .map(TaskAndAction::task),
+                Stream.concat(
+                    updatingTasks().stream(),
+                    Stream.concat(
+                        restoredActiveTasks.stream(),
+                        Stream.concat(
+                            exceptionsAndFailedTasks.stream().map(ExceptionAndTask::task),
+                            removedTasks.stream()))));
     }
 
     private class StateUpdaterMetrics {
@@ -747,20 +1066,36 @@ public class DefaultStateUpdater implements StateUpdater {
             final Map<String, String> threadLevelTags = new LinkedHashMap<>();
             threadLevelTags.put(THREAD_ID_TAG, threadId);
 
-            MetricName metricName = metrics.metricName("active-restoring-tasks", STATE_LEVEL_GROUP, "The number of active tasks currently undergoing restoration", threadLevelTags);
-            metrics.addMetric(metricName, (config, now) -> stateUpdaterThread != null ? stateUpdaterThread.getNumRestoringActiveTasks() : 0);
+            MetricName metricName = metrics.metricName("active-restoring-tasks",
+                STATE_LEVEL_GROUP,
+                "The number of active tasks currently undergoing restoration",
+                threadLevelTags);
+            metrics.addMetric(metricName, (config, now) -> stateUpdaterThread != null ?
+                stateUpdaterThread.numRestoringActiveTasks() : 0);
             allMetricNames.push(metricName);
 
-            metricName = metrics.metricName("standby-updating-tasks", STATE_LEVEL_GROUP, "The number of standby tasks currently undergoing state update", threadLevelTags);
-            metrics.addMetric(metricName, (config, now) -> stateUpdaterThread != null ? stateUpdaterThread.getNumUpdatingStandbyTasks() : 0);
+            metricName = metrics.metricName("standby-updating-tasks",
+                STATE_LEVEL_GROUP,
+                "The number of standby tasks currently undergoing state update",
+                threadLevelTags);
+            metrics.addMetric(metricName, (config, now) -> stateUpdaterThread != null ?
+                stateUpdaterThread.numUpdatingStandbyTasks() : 0);
             allMetricNames.push(metricName);
 
-            metricName = metrics.metricName("active-paused-tasks", STATE_LEVEL_GROUP, "The number of active tasks paused restoring", threadLevelTags);
-            metrics.addMetric(metricName, (config, now) -> stateUpdaterThread != null ? stateUpdaterThread.getNumPausedActiveTasks() : 0);
+            metricName = metrics.metricName("active-paused-tasks",
+                STATE_LEVEL_GROUP,
+                "The number of active tasks paused restoring",
+                threadLevelTags);
+            metrics.addMetric(metricName, (config, now) -> stateUpdaterThread != null ?
+                stateUpdaterThread.numPausedActiveTasks() : 0);
             allMetricNames.push(metricName);
 
-            metricName = metrics.metricName("standby-paused-tasks", STATE_LEVEL_GROUP, "The number of standby tasks paused state update", threadLevelTags);
-            metrics.addMetric(metricName, (config, now) -> stateUpdaterThread != null ? stateUpdaterThread.getNumPausedStandbyTasks() : 0);
+            metricName = metrics.metricName("standby-paused-tasks",
+                STATE_LEVEL_GROUP,
+                "The number of standby tasks paused state update",
+                threadLevelTags);
+            metrics.addMetric(metricName, (config, now) -> stateUpdaterThread != null ?
+                stateUpdaterThread.numPausedStandbyTasks() : 0);
             allMetricNames.push(metricName);
 
             this.idleRatioSensor = metrics.sensor("idle-ratio", RecordingLevel.INFO);
