@@ -17,22 +17,50 @@
 package org.apache.kafka.streams.processor.internals.assignment;
 
 import org.apache.kafka.common.TopicPartition;
-import org.apache.kafka.common.utils.Utils;
 import org.apache.kafka.streams.processor.TaskId;
 import org.apache.kafka.streams.processor.internals.Task;
-import org.junit.Test;
 
-import java.util.*;
+import org.junit.jupiter.api.Test;
+
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 import static java.util.Arrays.asList;
-import static org.apache.kafka.common.utils.Utils.*;
-import static org.apache.kafka.streams.processor.internals.assignment.AssignmentTestUtils.*;
+import static org.apache.kafka.common.utils.Utils.mkEntry;
+import static org.apache.kafka.common.utils.Utils.mkMap;
+import static org.apache.kafka.common.utils.Utils.mkSortedSet;
+import static org.apache.kafka.streams.processor.internals.assignment.AssignmentTestUtils.EMPTY_CLIENT_TAGS;
+import static org.apache.kafka.streams.processor.internals.assignment.AssignmentTestUtils.NAMED_TASK_T0_0_0;
+import static org.apache.kafka.streams.processor.internals.assignment.AssignmentTestUtils.NAMED_TASK_T1_0_0;
+import static org.apache.kafka.streams.processor.internals.assignment.AssignmentTestUtils.PID_1;
+import static org.apache.kafka.streams.processor.internals.assignment.AssignmentTestUtils.PID_2;
+import static org.apache.kafka.streams.processor.internals.assignment.AssignmentTestUtils.PID_3;
+import static org.apache.kafka.streams.processor.internals.assignment.AssignmentTestUtils.TASK_0_0;
+import static org.apache.kafka.streams.processor.internals.assignment.AssignmentTestUtils.TASK_0_1;
+import static org.apache.kafka.streams.processor.internals.assignment.AssignmentTestUtils.TASK_0_2;
+import static org.apache.kafka.streams.processor.internals.assignment.AssignmentTestUtils.TASK_0_3;
+import static org.apache.kafka.streams.processor.internals.assignment.AssignmentTestUtils.TP_0_0;
+import static org.apache.kafka.streams.processor.internals.assignment.AssignmentTestUtils.TP_0_1;
+import static org.apache.kafka.streams.processor.internals.assignment.AssignmentTestUtils.TP_0_2;
+import static org.apache.kafka.streams.processor.internals.assignment.AssignmentTestUtils.TP_1_0;
+import static org.apache.kafka.streams.processor.internals.assignment.AssignmentTestUtils.TP_1_1;
+import static org.apache.kafka.streams.processor.internals.assignment.AssignmentTestUtils.TP_1_2;
+import static org.apache.kafka.streams.processor.internals.assignment.AssignmentTestUtils.hasActiveTasks;
+import static org.apache.kafka.streams.processor.internals.assignment.AssignmentTestUtils.hasStandbyTasks;
+import static org.apache.kafka.streams.processor.internals.assignment.AssignmentTestUtils.processIdForInt;
 import static org.apache.kafka.streams.processor.internals.assignment.SubscriptionInfo.UNKNOWN_OFFSET_SUM;
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.is;
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class ClientStateTest {
     private final ClientState client = new ClientState(1);
@@ -40,7 +68,13 @@ public class ClientStateTest {
 
     @Test
     public void previousStateConstructorShouldCreateAValidObject() {
-        final ClientState clientState = new ClientState(mkSet(TASK_0_0, TASK_0_1), mkSet(TASK_0_2, TASK_0_3), mkMap(mkEntry(TASK_0_0, 5L), mkEntry(TASK_0_2, -1L)), EMPTY_CLIENT_TAGS, 4);
+        final ClientState clientState = new ClientState(
+            Set.of(TASK_0_0, TASK_0_1),
+            Set.of(TASK_0_2, TASK_0_3),
+            mkMap(mkEntry(TASK_0_0, 5L), mkEntry(TASK_0_2, -1L)),
+            EMPTY_CLIENT_TAGS,
+            4
+        );
 
         // all the "next assignment" fields should be empty
         assertThat(clientState.activeTaskCount(), is(0));
@@ -52,9 +86,9 @@ public class ClientStateTest {
         assertThat(clientState.assignedTasks(), is(empty()));
 
         // and the "previous assignment" fields should match the constructor args
-        assertThat(clientState.prevActiveTasks(), is(mkSet(TASK_0_0, TASK_0_1)));
-        assertThat(clientState.prevStandbyTasks(), is(mkSet(TASK_0_2, TASK_0_3)));
-        assertThat(clientState.previousAssignedTasks(), is(mkSet(TASK_0_0, TASK_0_1, TASK_0_2, TASK_0_3)));
+        assertThat(clientState.prevActiveTasks(), is(Set.of(TASK_0_0, TASK_0_1)));
+        assertThat(clientState.prevStandbyTasks(), is(Set.of(TASK_0_2, TASK_0_3)));
+        assertThat(clientState.previousAssignedTasks(), is(Set.of(TASK_0_0, TASK_0_1, TASK_0_2, TASK_0_3)));
         assertThat(clientState.capacity(), is(4));
         assertThat(clientState.lagFor(TASK_0_0), is(5L));
         assertThat(clientState.lagFor(TASK_0_2), is(-1L));
@@ -188,16 +222,16 @@ public class ClientStateTest {
 
     @Test
     public void shouldAddPreviousActiveTasksToPreviousAssignedAndPreviousActive() {
-        client.addPreviousActiveTasks(Utils.mkSet(TASK_0_1, TASK_0_2));
-        assertThat(client.prevActiveTasks(), equalTo(Utils.mkSet(TASK_0_1, TASK_0_2)));
-        assertThat(client.previousAssignedTasks(), equalTo(Utils.mkSet(TASK_0_1, TASK_0_2)));
+        client.addPreviousActiveTasks(Set.of(TASK_0_1, TASK_0_2));
+        assertThat(client.prevActiveTasks(), equalTo(Set.of(TASK_0_1, TASK_0_2)));
+        assertThat(client.previousAssignedTasks(), equalTo(Set.of(TASK_0_1, TASK_0_2)));
     }
 
     @Test
     public void shouldAddPreviousStandbyTasksToPreviousAssignedAndPreviousStandby() {
-        client.addPreviousStandbyTasks(Utils.mkSet(TASK_0_1, TASK_0_2));
+        client.addPreviousStandbyTasks(Set.of(TASK_0_1, TASK_0_2));
         assertThat(client.prevActiveTasks().size(), equalTo(0));
-        assertThat(client.previousAssignedTasks(), equalTo(Utils.mkSet(TASK_0_1, TASK_0_2)));
+        assertThat(client.previousAssignedTasks(), equalTo(Set.of(TASK_0_1, TASK_0_2)));
     }
 
     @Test
@@ -313,30 +347,54 @@ public class ClientStateTest {
 
     @Test
     public void shouldReturnPreviousStatefulTasksForConsumer() {
-        client.addPreviousTasksAndOffsetSums("c1", mkMap(mkEntry(TASK_0_0, 100L), mkEntry(TASK_0_1, Task.LATEST_OFFSET)));
+        client.addPreviousTasksAndOffsetSums("c1", mkMap(
+                mkEntry(TASK_0_0, 100L),
+                mkEntry(TASK_0_1, Task.LATEST_OFFSET)
+        ));
         client.addPreviousTasksAndOffsetSums("c2", Collections.singletonMap(TASK_0_2, 0L));
         client.addPreviousTasksAndOffsetSums("c3", Collections.emptyMap());
 
         client.initializePrevTasks(Collections.emptyMap(), false);
 
-        assertThat(client.prevOwnedStatefulTasksByConsumer("c1"), equalTo(mkSet(TASK_0_0, TASK_0_1)));
-        assertThat(client.prevOwnedStatefulTasksByConsumer("c2"), equalTo(mkSet(TASK_0_2)));
+        assertThat(client.prevOwnedStatefulTasksByConsumer("c1"), equalTo(Set.of(TASK_0_0, TASK_0_1)));
+        assertThat(client.prevOwnedStatefulTasksByConsumer("c2"), equalTo(Set.of(TASK_0_2)));
         assertTrue(client.prevOwnedStatefulTasksByConsumer("c3").isEmpty());
     }
 
     @Test
     public void shouldReturnPreviousActiveStandbyTasksForConsumer() {
-        client.addOwnedPartitions(mkSet(TP_0_1, TP_1_1), "c1");
-        client.addOwnedPartitions(mkSet(TP_0_2, TP_1_2), "c2");
-        client.initializePrevTasks(mkMap(mkEntry(TP_0_0, TASK_0_0), mkEntry(TP_0_1, TASK_0_1), mkEntry(TP_0_2, TASK_0_2), mkEntry(TP_1_0, TASK_0_0), mkEntry(TP_1_1, TASK_0_1), mkEntry(TP_1_2, TASK_0_2)), false);
+        client.addOwnedPartitions(Set.of(TP_0_1, TP_1_1), "c1");
+        client.addOwnedPartitions(Set.of(TP_0_2, TP_1_2), "c2");
+        client.initializePrevTasks(
+            mkMap(
+                mkEntry(TP_0_0, TASK_0_0),
+                mkEntry(TP_0_1, TASK_0_1),
+                mkEntry(TP_0_2, TASK_0_2),
+                mkEntry(TP_1_0, TASK_0_0),
+                mkEntry(TP_1_1, TASK_0_1),
+                mkEntry(TP_1_2, TASK_0_2)),
+            false
+        );
 
-        client.addPreviousTasksAndOffsetSums("c1", mkMap(mkEntry(TASK_0_1, Task.LATEST_OFFSET), mkEntry(TASK_0_0, 10L)));
+        client.addPreviousTasksAndOffsetSums("c1", mkMap(
+                mkEntry(TASK_0_1, Task.LATEST_OFFSET),
+                mkEntry(TASK_0_0, 10L)));
         client.addPreviousTasksAndOffsetSums("c2", Collections.singletonMap(TASK_0_2, 0L));
 
-        assertThat(client.prevOwnedStatefulTasksByConsumer("c1"), equalTo(mkSet(TASK_0_1, TASK_0_0)));
-        assertThat(client.prevOwnedStatefulTasksByConsumer("c2"), equalTo(mkSet(TASK_0_2)));
-        assertThat(client.prevOwnedActiveTasksByConsumer(), equalTo(mkMap(mkEntry("c1", Collections.singleton(TASK_0_1)), mkEntry("c2", Collections.singleton(TASK_0_2)))));
-        assertThat(client.prevOwnedStandbyByConsumer(), equalTo(mkMap(mkEntry("c1", Collections.singleton(TASK_0_0)), mkEntry("c2", Collections.emptySet()))));
+        assertThat(client.prevOwnedStatefulTasksByConsumer("c1"), equalTo(Set.of(TASK_0_1, TASK_0_0)));
+        assertThat(client.prevOwnedStatefulTasksByConsumer("c2"), equalTo(Set.of(TASK_0_2)));
+        assertThat(client.prevOwnedActiveTasksByConsumer(), equalTo(
+                mkMap(
+                        mkEntry("c1", Collections.singleton(TASK_0_1)),
+                        mkEntry("c2", Collections.singleton(TASK_0_2))
+                ))
+        );
+        assertThat(client.prevOwnedStandbyByConsumer(), equalTo(
+                mkMap(
+                        mkEntry("c1", Collections.singleton(TASK_0_0)),
+                        mkEntry("c2", Collections.emptySet())
+                ))
+        );
     }
 
     @Test
@@ -359,25 +417,40 @@ public class ClientStateTest {
         // calling it multiple tasks should be idempotent
         client.revokeActiveFromConsumer(TASK_0_1, "c1");
 
-        assertThat(client.assignedActiveTasksByConsumer(), equalTo(mkMap(mkEntry("c1", mkSet(TASK_0_0, TASK_0_1)), mkEntry("c2", mkSet(TASK_0_2)))));
-        assertThat(client.assignedStandbyTasksByConsumer(), equalTo(mkMap(mkEntry("c1", mkSet(TASK_0_2)), mkEntry("c2", mkSet(TASK_0_0)))));
-        assertThat(client.revokingActiveTasksByConsumer(), equalTo(Collections.singletonMap("c1", mkSet(TASK_0_1))));
+        assertThat(client.assignedActiveTasksByConsumer(), equalTo(mkMap(
+                mkEntry("c1", Set.of(TASK_0_0, TASK_0_1)),
+                mkEntry("c2", Set.of(TASK_0_2))
+        )));
+        assertThat(client.assignedStandbyTasksByConsumer(), equalTo(mkMap(
+                mkEntry("c1", Set.of(TASK_0_2)),
+                mkEntry("c2", Set.of(TASK_0_0))
+        )));
+        assertThat(client.revokingActiveTasksByConsumer(), equalTo(Collections.singletonMap("c1", Set.of(TASK_0_1))));
     }
 
     @Test
     public void shouldAddTasksInOffsetSumsMapToPrevStandbyTasks() {
-        final Map<TaskId, Long> taskOffsetSums = mkMap(mkEntry(TASK_0_1, 0L), mkEntry(TASK_0_2, 100L));
+        final Map<TaskId, Long> taskOffsetSums = mkMap(
+            mkEntry(TASK_0_1, 0L),
+            mkEntry(TASK_0_2, 100L)
+        );
         client.addPreviousTasksAndOffsetSums("c1", taskOffsetSums);
         client.initializePrevTasks(Collections.emptyMap(), false);
-        assertThat(client.prevStandbyTasks(), equalTo(mkSet(TASK_0_1, TASK_0_2)));
-        assertThat(client.previousAssignedTasks(), equalTo(mkSet(TASK_0_1, TASK_0_2)));
+        assertThat(client.prevStandbyTasks(), equalTo(Set.of(TASK_0_1, TASK_0_2)));
+        assertThat(client.previousAssignedTasks(), equalTo(Set.of(TASK_0_1, TASK_0_2)));
         assertTrue(client.prevActiveTasks().isEmpty());
     }
 
     @Test
     public void shouldComputeTaskLags() {
-        final Map<TaskId, Long> taskOffsetSums = mkMap(mkEntry(TASK_0_1, 0L), mkEntry(TASK_0_2, 100L));
-        final Map<TaskId, Long> allTaskEndOffsetSums = mkMap(mkEntry(TASK_0_1, 500L), mkEntry(TASK_0_2, 100L));
+        final Map<TaskId, Long> taskOffsetSums = mkMap(
+            mkEntry(TASK_0_1, 0L),
+            mkEntry(TASK_0_2, 100L)
+        );
+        final Map<TaskId, Long> allTaskEndOffsetSums = mkMap(
+            mkEntry(TASK_0_1, 500L),
+            mkEntry(TASK_0_2, 100L)
+        );
         client.addPreviousTasksAndOffsetSums("c1", taskOffsetSums);
         client.computeTaskLags(null, allTaskEndOffsetSums);
 
@@ -387,7 +460,10 @@ public class ClientStateTest {
 
     @Test
     public void shouldNotTryToLookupTasksThatWerePreviouslyAssignedButNoLongerExist() {
-        final Map<TaskId, Long> clientReportedTaskEndOffsetSums = mkMap(mkEntry(NAMED_TASK_T0_0_0, 500L), mkEntry(NAMED_TASK_T1_0_0, 500L));
+        final Map<TaskId, Long> clientReportedTaskEndOffsetSums = mkMap(
+            mkEntry(NAMED_TASK_T0_0_0, 500L),
+            mkEntry(NAMED_TASK_T1_0_0, 500L)
+            );
         final Map<TaskId, Long> allTaskEndOffsetSumsComputedByAssignor = Collections.singletonMap(NAMED_TASK_T0_0_0, 500L);
         client.addPreviousTasksAndOffsetSums("c1", clientReportedTaskEndOffsetSums);
         client.computeTaskLags(null, allTaskEndOffsetSumsComputedByAssignor);
@@ -465,7 +541,7 @@ public class ClientStateTest {
     @Test
     public void shouldReturnClientTags() {
         final Map<String, String> clientTags = mkMap(mkEntry("k1", "v1"));
-        assertEquals(clientTags, new ClientState(0, clientTags).clientTags());
+        assertEquals(clientTags, new ClientState(null, 0, clientTags).clientTags());
     }
 
     @Test
@@ -473,4 +549,24 @@ public class ClientStateTest {
         assertTrue(new ClientState().clientTags().isEmpty());
     }
 
+    @Test
+    public void shouldSetProcessId() {
+        assertEquals(PID_1, new ClientState(PID_1, 1).processId());
+        assertEquals(PID_2, new ClientState(PID_2, mkMap()).processId());
+        assertEquals(PID_3, new ClientState(PID_3, 1, mkMap()).processId());
+        assertNull(new ClientState().processId());
+    }
+
+    @Test
+    public void shouldCopyState() {
+        final ClientState clientState = new ClientState(Set.of(new TaskId(0, 0)), Set.of(new TaskId(0, 1)), Collections.emptyMap(), EMPTY_CLIENT_TAGS, 1, processIdForInt(1));
+        final ClientState clientStateCopy = new ClientState(clientState);
+
+        assertEquals(clientStateCopy.processId(), clientState.processId());
+        assertEquals(clientStateCopy.capacity(), clientState.capacity());
+        assertEquals(clientStateCopy.prevActiveTasks(), clientStateCopy.prevActiveTasks());
+        assertEquals(clientStateCopy.prevStandbyTasks(), clientStateCopy.prevStandbyTasks());
+        assertThat(clientStateCopy.prevActiveTasks(), equalTo(clientState.prevActiveTasks()));
+        assertThat(clientStateCopy.prevStandbyTasks(), equalTo(clientState.prevStandbyTasks()));
+    }
 }
